--- a/md/专业技能/01.html
+++ b/md/专业技能/01.html
@@ -79,12 +79,28 @@
                 <div class="search-noresults">
                     <section class="normal markdown-section">
                         <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第一章 健康监测</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>第一节 信息采集</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>1.1. </b>卫生服务记录表单的主要内容（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>1.2. </b>常用健康调查表的种类（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>1.3. </b>人体体格测量常用指标的种类（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>1.4. </b>评价体重状况的表示方法（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_7'><b>1.5. </b>儿童年龄组别体重的评价方法（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_8'><b>1.6. </b>儿童身高组别体重的评价方法（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_9'><b>1.7. </b>理想体重计算公式（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_10'><b>1.8. </b>体质指数计算公式（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_11'><b>1.9. </b>腰围的评价方法（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_12'><b>1.10. </b>血压的分类（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_13'><b>1.11. </b>血压的表示方法（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_14'><b>1.12. </b>中国成年人血压的标准（掌握）</a></li></ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_15'><b>2. </b>第二节 信息管理</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_16'><b>2.1. </b>信息录入容易产生的错误种类（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_17'><b>2.2. </b>信息清理的常用方法（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_18'><b>2.3. </b>调查问卷的保存原则（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_19'><b>2.4. </b>健康信息安全的构成（了解）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_20'><b>2.5. </b>加强信息安全的策略（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_21'><b>2.6. </b>健康信息的收集</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_22'><b>2.7. </b>人群健康管理的基本步骤和常用服务流程</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_23'><b>2.8. </b>问卷调查的主要内容</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_24'><b>2.9. </b>体检项目的主要内容</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_25'><b>2.10. </b>社区慢性病管理所使用的健康调查表一般包括哪些内容</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_26'><b>2.11. </b>管理已收集的健康信息</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_27'><b>2.12. </b>对于已收集的健康相关信息，从哪几方面进行信息管理？</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_28'><b>2.13. </b>腰围的测量</a></li></ul></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
-                        <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第一章 健康监测</h1>
-<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 第一节 信息采集</h2>
-<h3 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>1.1. 卫生服务记录表单的主要内容（熟悉）</h3>
+                        <h1 id="anchor_1">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>第一章 健康监测
+</h1>
+<h2 id="anchor_2">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>1. 第一节 信息采集
+</h2>
+<h3 id="anchor_3">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>1.1. 卫生服务记录表单的主要内容（熟悉）
+</h3>
 <p>卫生服务记录表单是卫生管理部门依据国家法律法规、卫生制度和技术规范的要求，用于记录服务对象的有关基本信息、健康信息以及卫生服务操作过程与结果的医学技术文档，具有医学效力和法律效力。</p>
 <p>一般包括如下部分：基本信息、儿童保健、妇女保健、疾病控制、疾病管理和医疗服务。</p>
-<h3 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>1.2. 常用健康调查表的种类（掌握）</h3>
+<h3 id="anchor_4">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>1.2. 常用健康调查表的种类（掌握）
+</h3>
 <p>三类：</p>
 <ol>
 <li>健康体检表、</li>
@@ -100,54 +116,106 @@
 <li>疾病管理</li>
 <li>医疗服务</li>
 </ol>
-<h3 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>1.3. 人体体格测量常用指标的种类（掌握）</h3>
+<h3 id="anchor_5">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>1.3. 人体体格测量常用指标的种类（掌握）
+</h3>
 <ol>
 <li>体重和身高</li>
 <li>腰围</li>
 <li>血压</li>
 <li>心率</li>
 </ol>
-<h3 id="anchor_6"><a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6"><i aria-hidden="true" class="fa fa-link"></i></a>1.4. 评价体重状况的表示方法（掌握）</h3>
+<h3 id="anchor_6">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>1.4. 评价体重状况的表示方法（掌握）
+</h3>
 <ol>
 <li>年龄组别体重</li>
 <li>身高组别体重</li>
 <li>理想体重（标准体重）</li>
 <li>体质指数</li>
 </ol>
-<h3 id="anchor_7"><a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7"><i aria-hidden="true" class="fa fa-link"></i></a>1.5. 儿童年龄组别体重的评价方法（熟悉）</h3>
+<h3 id="anchor_7">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>1.5. 儿童年龄组别体重的评价方法（熟悉）
+</h3>
 <p>主要用于儿童。</p>
 <p>以实测体重与同年龄组的标准体重进行比较，应在标准体重均值的 2 个标准范围内（或在第 25~75 百分位数范围）。</p>
-<h3 id="anchor_8"><a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8"><i aria-hidden="true" class="fa fa-link"></i></a>1.6. 儿童身高组别体重的评价方法（熟悉）</h3>
+<h3 id="anchor_8">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>1.6. 儿童身高组别体重的评价方法（熟悉）
+</h3>
 <p>以实测体重与同身高组的标准体重相比较，应在均值的 2 个标准范围内（或在第 25~75 百分位数范围）。</p>
 <p>主要用于儿童，对区分急性营养不良和慢性营养不良有较大意义。</p>
-<h3 id="anchor_9"><a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9"><i aria-hidden="true" class="fa fa-link"></i></a>1.7. 理想体重计算公式（熟悉）</h3>
+<h3 id="anchor_9">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>1.7. 理想体重计算公式（熟悉）
+</h3>
 <p>理想体重 = 身高（cm）-100（身高 165cm 以下者减 105）。</p>
 <p>实测体重在理想体重 ±10% 范围为正常，±10%-20% 为瘦弱或者超重，超过 20% 为肥胖，低于 20% 为严重消瘦。</p>
-<h3 id="anchor_10"><a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10"><i aria-hidden="true" class="fa fa-link"></i></a>1.8. 体质指数计算公式（掌握）</h3>
+<h3 id="anchor_10">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>1.8. 体质指数计算公式（掌握）
+</h3>
 <p>评价 18 岁以上成人群体营养状况的常用指标。</p>
 <p>\(BMI = 体重 (kg) / [ 身高 (m)] ^ 2\)</p>
 <p>中国成人标准：BMI&lt;18.5kg/m² 低体重，18.5~23.9kg/m² 正常，24.0~27.9kg/m² 超重，≥28kg/m² 为肥胖。</p>
-<h3 id="anchor_11"><a class="anchor-navigation-ex-anchor" href="#anchor_11" name="anchor_11"><i aria-hidden="true" class="fa fa-link"></i></a>1.9. 腰围的评价方法（掌握）</h3>
+<h3 id="anchor_11">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_11" name="anchor_11">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>1.9. 腰围的评价方法（掌握）
+</h3>
 <p>腰围是临床上估计患者腹部脂肪过多的最简单和实用的指标。</p>
 <p>男性腰围 ≥85cm、女性腰围 ≥80cm 患肥胖相关疾病的危险性增加。</p>
-<h3 id="anchor_12"><a class="anchor-navigation-ex-anchor" href="#anchor_12" name="anchor_12"><i aria-hidden="true" class="fa fa-link"></i></a>1.10. 血压的分类（掌握）</h3>
+<h3 id="anchor_12">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_12" name="anchor_12">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>1.10. 血压的分类（掌握）
+</h3>
 <p>血压有动脉血压、毛细血管压、静脉压。</p>
 <p>通常说的血压是动脉血压，动脉血压又分为收缩压和舒张压。</p>
 <ul>
 <li>心脏收缩时，动脉内的压力最高，此时压力称收缩压。</li>
 <li>心脏舒张时，动脉弹性回缩产生的压力称为舒张压，也称低压。</li>
 </ul>
-<h3 id="anchor_13"><a class="anchor-navigation-ex-anchor" href="#anchor_13" name="anchor_13"><i aria-hidden="true" class="fa fa-link"></i></a>1.11. 血压的表示方法（掌握）</h3>
+<h3 id="anchor_13">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_13" name="anchor_13">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>1.11. 血压的表示方法（掌握）
+</h3>
 <p>血压通常以毫米汞柱（mmHg）表示，也可用千帕（kPa）表示，1mmHg=0.133kPa，也就是 7.5mmHg=1kPa</p>
-<h3 id="anchor_14"><a class="anchor-navigation-ex-anchor" href="#anchor_14" name="anchor_14"><i aria-hidden="true" class="fa fa-link"></i></a>1.12. 中国成年人血压的标准（掌握）</h3>
+<h3 id="anchor_14">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_14" name="anchor_14">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>1.12. 中国成年人血压的标准（掌握）
+</h3>
 <ul>
 <li>正常血压：收缩压 &lt;120mmHg，舒张压 &lt;80mmHg</li>
 <li>正常高值：收缩压 120~139mmHg，舒张压 80~89mmHg 高血压：收缩压 ≥140mmHg，舒张压 ≥90mmHg</li>
 </ul>
-<h2 id="anchor_15"><a class="anchor-navigation-ex-anchor" href="#anchor_15" name="anchor_15"><i aria-hidden="true" class="fa fa-link"></i></a>2. 第二节 信息管理</h2>
-<h3 id="anchor_16"><a class="anchor-navigation-ex-anchor" href="#anchor_16" name="anchor_16"><i aria-hidden="true" class="fa fa-link"></i></a>2.1. 信息录入容易产生的错误种类（熟悉）</h3>
+<h2 id="anchor_15">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_15" name="anchor_15">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>2. 第二节 信息管理
+</h2>
+<h3 id="anchor_16">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_16" name="anchor_16">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>2.1. 信息录入容易产生的错误种类（熟悉）
+</h3>
 <p>信息录入错误主要有读不懂手写文字、错误的答案、编码错误、错误的编码位置、遗漏数据、重复录入数据等。</p>
-<h3 id="anchor_17"><a class="anchor-navigation-ex-anchor" href="#anchor_17" name="anchor_17"><i aria-hidden="true" class="fa fa-link"></i></a>2.2. 信息清理的常用方法（熟悉）</h3>
+<h3 id="anchor_17">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_17" name="anchor_17">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>2.2. 信息清理的常用方法（熟悉）
+</h3>
 <ol>
 <li>通过其他人重新输入数据来检查错误（即双份录入）或是通过专人来检查差错。</li>
 <li>目测检查数据文件中的记录是否存在相同的格式，是否能发现空白数据。</li>
@@ -158,9 +226,17 @@
 </ul>
 </li>
 </ol>
-<h3 id="anchor_18"><a class="anchor-navigation-ex-anchor" href="#anchor_18" name="anchor_18"><i aria-hidden="true" class="fa fa-link"></i></a>2.3. 调查问卷的保存原则（熟悉）</h3>
+<h3 id="anchor_18">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_18" name="anchor_18">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>2.3. 调查问卷的保存原则（熟悉）
+</h3>
 <p>保证信息档案的完整、安全、方便查阅。</p>
-<h3 id="anchor_19"><a class="anchor-navigation-ex-anchor" href="#anchor_19" name="anchor_19"><i aria-hidden="true" class="fa fa-link"></i></a>2.4. 健康信息安全的构成（了解）</h3>
+<h3 id="anchor_19">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_19" name="anchor_19">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>2.4. 健康信息安全的构成（了解）
+</h3>
 <p>信息安全主要包括五个方面的内容：</p>
 <ol>
 <li>保密性</li>
@@ -169,9 +245,17 @@
 <li>未授权拷贝</li>
 <li>所寄生系统的安全性</li>
 </ol>
-<h3 id="anchor_20"><a class="anchor-navigation-ex-anchor" href="#anchor_20" name="anchor_20"><i aria-hidden="true" class="fa fa-link"></i></a>2.5. 加强信息安全的策略（熟悉）</h3>
+<h3 id="anchor_20">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_20" name="anchor_20">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>2.5. 加强信息安全的策略（熟悉）
+</h3>
 <p>信息安全的策略主要是制定严格的规章制度和严格的安全管理制度。</p>
-<h3 id="anchor_21"><a class="anchor-navigation-ex-anchor" href="#anchor_21" name="anchor_21"><i aria-hidden="true" class="fa fa-link"></i></a>2.6. 健康信息的收集</h3>
+<h3 id="anchor_21">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_21" name="anchor_21">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>2.6. 健康信息的收集
+</h3>
 <ol>
 <li>收集资料前的准备</li>
 <li>明确调查对象</li>
@@ -181,7 +265,11 @@
 <li>结束访谈、致谢</li>
 <li>资料的保存</li>
 </ol>
-<h3 id="anchor_22"><a class="anchor-navigation-ex-anchor" href="#anchor_22" name="anchor_22"><i aria-hidden="true" class="fa fa-link"></i></a>2.7. 人群健康管理的基本步骤和常用服务流程</h3>
+<h3 id="anchor_22">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_22" name="anchor_22">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>2.7. 人群健康管理的基本步骤和常用服务流程
+</h3>
 <p>基本步骤：</p>
 <ol>
 <li>收集服务对象的健康信息；</li>
@@ -196,7 +284,11 @@
 <li>健康管理的后续服务；</li>
 <li>专项的健康和疾病管理</li>
 </ol>
-<h3 id="anchor_23"><a class="anchor-navigation-ex-anchor" href="#anchor_23" name="anchor_23"><i aria-hidden="true" class="fa fa-link"></i></a>2.8. 问卷调查的主要内容</h3>
+<h3 id="anchor_23">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_23" name="anchor_23">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>2.8. 问卷调查的主要内容
+</h3>
 <ol>
 <li>个人基本信息：</li>
 </ol>
@@ -213,7 +305,11 @@
 <li>现健康状况、既往病史和家族病史：</li>
 </ol>
 <p>心血管疾病、代谢性疾病、恶性肿瘤、遗传病等</p>
-<h3 id="anchor_24"><a class="anchor-navigation-ex-anchor" href="#anchor_24" name="anchor_24"><i aria-hidden="true" class="fa fa-link"></i></a>2.9. 体检项目的主要内容</h3>
+<h3 id="anchor_24">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_24" name="anchor_24">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>2.9. 体检项目的主要内容
+</h3>
 <ul>
 <li>
 <p>体格检查：</p>
@@ -232,7 +328,11 @@
 <p>还应重点关注慢性非传染性疾病的风险因素情况，特别是用于评估代谢性疾病、心血管疾病和恶性肿瘤发病风险的指标，如口服葡萄糖试验、糖化血红蛋白、肿瘤标记物等</p>
 </li>
 </ul>
-<h3 id="anchor_25"><a class="anchor-navigation-ex-anchor" href="#anchor_25" name="anchor_25"><i aria-hidden="true" class="fa fa-link"></i></a>2.10. 社区慢性病管理所使用的健康调查表一般包括哪些内容</h3>
+<h3 id="anchor_25">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_25" name="anchor_25">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>2.10. 社区慢性病管理所使用的健康调查表一般包括哪些内容
+</h3>
 <ol>
 <li>基本信息：</li>
 </ol>
@@ -244,7 +344,11 @@
 <ol>
 <li>体检及相关疾病管理的随访情况表等。</li>
 </ol>
-<h3 id="anchor_26"><a class="anchor-navigation-ex-anchor" href="#anchor_26" name="anchor_26"><i aria-hidden="true" class="fa fa-link"></i></a>2.11. 管理已收集的健康信息</h3>
+<h3 id="anchor_26">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_26" name="anchor_26">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>2.11. 管理已收集的健康信息
+</h3>
 <ol>
 <li>录入员培训；</li>
 <li>数据录入，双录入；</li>
@@ -252,7 +356,11 @@
 <li>健康信息的传递和接受；</li>
 <li>健康信息的保存</li>
 </ol>
-<h3 id="anchor_27"><a class="anchor-navigation-ex-anchor" href="#anchor_27" name="anchor_27"><i aria-hidden="true" class="fa fa-link"></i></a>2.12. 对于已收集的健康相关信息，从哪几方面进行信息管理？</h3>
+<h3 id="anchor_27">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_27" name="anchor_27">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>2.12. 对于已收集的健康相关信息，从哪几方面进行信息管理？
+</h3>
 <ol>
 <li>健康信息的录入：</li>
 </ol>
@@ -277,7 +385,11 @@
 <li>信息更新：</li>
 </ol>
 <p>健康管理的过程具有连续性，需要不断进行更新。</p>
-<h3 id="anchor_28"><a class="anchor-navigation-ex-anchor" href="#anchor_28" name="anchor_28"><i aria-hidden="true" class="fa fa-link"></i></a>2.13. 腰围的测量</h3>
+<h3 id="anchor_28">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_28" name="anchor_28">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>2.13. 腰围的测量
+</h3>
 <p>测量时两腿直立，两脚分开 30-40 厘米，用一个没有弹性、最小刻度为 1mm 的软尺放在右侧腋中线胯骨上缘与第十二肋骨下缘连线的中点（通常是腰部的天然最窄处），沿水平方向围绕腹部一周，紧贴而不压迫，在正常呼气末测量腰围长度，读数准确至 1mm。</p>
 
                         <footer class="page-footer">
