--- a/md/基础知识/01.html
+++ b/md/基础知识/01.html
@@ -79,11 +79,23 @@
                 <div class="search-noresults">
                     <section class="normal markdown-section">
                         <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第一章 健康管理概述</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>健康管理的概念和特点（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>健康管理的主要目标和任务（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>健康管理的科学基础（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>4. </b>健康管理的基本步骤（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>5. </b>健康管理的服务流程（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_7'><b>6. </b>健康管理基本策略的种类（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_8'><b>7. </b>生活方式管理的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_9'><b>8. </b>生活方式管理的特点（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_10'><b>9. </b>需求管理的概念（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_11'><b>10. </b>影响需求的主要因素（了解）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_12'><b>11. </b>需求预测的主要方法（了解）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_13'><b>12. </b>疾病管理的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_14'><b>13. </b>疾病管理的主要特点（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_15'><b>14. </b>残疾管理的目的（了解）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_16'><b>15. </b>综合的群体健康管理的要点（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_17'><b>16. </b>中国迫切需要健康管理的主要表现（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_18'><b>17. </b>健康管理对于推进医改工作的意义（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_19'><b>18. </b>健康与生产力管理的概念、基本原理及测量方法（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_20'><b>19. </b>基本卫生保健的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_21'><b>20. </b>基本卫生保健的原则（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_22'><b>21. </b>基本卫生保健的内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_23'><b>22. </b>基本卫生保健的特点（了解）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_24'><b>23. </b>基本卫生保健的意义（了解）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_25'><b>24. </b>中国特色的“治未病与健康管理”模式（了解）</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
-                        <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第一章 健康管理概述</h1>
-<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 健康管理的概念和特点（掌握）</h2>
+                        <h1 id="anchor_1">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>第一章 健康管理概述
+</h1>
+<h2 id="anchor_2">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>1. 健康管理的概念和特点（掌握）
+</h2>
 <p>健康管理就是在控制健康风险这个需求的基础上对健康资源进行计划、组织、指挥、协调和控制的过程，也就是对个体或群体的健康进行全面监测、分析、评估、提供健康咨询和指导及对健康危险因素进行干预的全过程。</p>
 <p>健康管理服务 4 个特点：标准化、量化、个体化、系统化。</p>
-<h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 健康管理的主要目标和任务（掌握）</h2>
+<h2 id="anchor_3">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>2. 健康管理的主要目标和任务（掌握）
+</h2>
 <ol>
 <li>完善健康和福利</li>
 <li>减少健康危险因素</li>
@@ -94,11 +106,19 @@
 <li>消除和减少无效或不必要的医疗服务</li>
 <li>对疾病结局做出度量并提供持续的评估和改进</li>
 </ol>
-<h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 健康管理的科学基础（熟悉）</h2>
+<h2 id="anchor_4">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>3. 健康管理的科学基础（熟悉）
+</h2>
 <p>健康管理的科学性建立在慢性病的两个特点上。</p>
 <p>首先，健康和疾病的动态平衡关系及疾病的发生、发展过程及预防医学的干预策略是健康管理的重要科学基础之一。</p>
 <p>其次，在慢性病的危险因素中，大部分是可以干预的，这为健康风险的控制提供了第二个重要的科学基础。</p>
-<h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>4. 健康管理的基本步骤（掌握）</h2>
+<h2 id="anchor_5">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>4. 健康管理的基本步骤（掌握）
+</h2>
 <p>第一步：了解和掌握你的健康，开展健康状况检测和信息收集。（调查问卷 + 体检）</p>
 <ol>
 <li>一般情况：性别、年龄、职业等；</li>
@@ -109,7 +129,11 @@
 </ol>
 <p>第二步：关心和评价你的健康，开展健康风险评估和健康评价。对目前的生活习惯行为、生理（体检）指标及未来患病 / 死亡危险性进行定性或量化评估。</p>
 <p>第三步：改善和促进你的健康，开展健康风险干预和健康促进，进行健康干预。在前两部分的基础上，以多种形式来帮助个人采取行动、纠正不良的生活方式和习惯，控制健康危险因素。主要内容有：膳食指导、运动干预、心理疏导、戒烟限酒。</p>
-<h2 id="anchor_6"><a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6"><i aria-hidden="true" class="fa fa-link"></i></a>5. 健康管理的服务流程（掌握）</h2>
+<h2 id="anchor_6">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>5. 健康管理的服务流程（掌握）
+</h2>
 <ol>
 <li>健康体检</li>
 <li>健康评估</li>
@@ -117,7 +141,11 @@
 <li>个人健康管理后续服务</li>
 <li>专项的健康及疾病管理服务。</li>
 </ol>
-<h2 id="anchor_7"><a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7"><i aria-hidden="true" class="fa fa-link"></i></a>6. 健康管理基本策略的种类（掌握）</h2>
+<h2 id="anchor_7">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>6. 健康管理基本策略的种类（掌握）
+</h2>
 <ol>
 <li>生活方式管理</li>
 <li>需求管理</li>
@@ -126,54 +154,102 @@
 <li>残疾管理</li>
 <li>综合的人群健康管理</li>
 </ol>
-<h2 id="anchor_8"><a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8"><i aria-hidden="true" class="fa fa-link"></i></a>7. 生活方式管理的概念（掌握）</h2>
+<h2 id="anchor_8">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>7. 生活方式管理的概念（掌握）
+</h2>
 <p>生活方式管理是指以个人或自我为核心的卫生保健活动。该定义强调个人选择行为方式的重要性。</p>
-<h2 id="anchor_9"><a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9"><i aria-hidden="true" class="fa fa-link"></i></a>8. 生活方式管理的特点（熟悉）</h2>
+<h2 id="anchor_9">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>8. 生活方式管理的特点（熟悉）
+</h2>
 <ol>
 <li>以个体为中心，强调个体的健康责任和作用。</li>
 <li>以预防为主，有效整合三级预防。预防是生活方式管理的核心。</li>
 <li>通常与其他健康管理策略联合进行。</li>
 </ol>
-<h2 id="anchor_10"><a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10"><i aria-hidden="true" class="fa fa-link"></i></a>9. 需求管理的概念（熟悉）</h2>
+<h2 id="anchor_10">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>9. 需求管理的概念（熟悉）
+</h2>
 <p>需求管理包括自我保健服务和人群就诊分流服务。需求管理实质上是通过帮助健康消费者维护自身健康和寻求恰当的卫生服务，控制卫生成本，促进卫生服务的合理利用。</p>
 <p>需求管理的目标是减少昂贵的、临床并非必要的医疗服务，同时改善人群的健康状况。</p>
-<h2 id="anchor_11"><a class="anchor-navigation-ex-anchor" href="#anchor_11" name="anchor_11"><i aria-hidden="true" class="fa fa-link"></i></a>10. 影响需求的主要因素（了解）</h2>
+<h2 id="anchor_11">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_11" name="anchor_11">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>10. 影响需求的主要因素（了解）
+</h2>
 <ol>
 <li>患病率</li>
 <li>感知到的需要</li>
 <li>患者偏好</li>
 <li>健康因素以外的动机</li>
 </ol>
-<h2 id="anchor_12"><a class="anchor-navigation-ex-anchor" href="#anchor_12" name="anchor_12"><i aria-hidden="true" class="fa fa-link"></i></a>11. 需求预测的主要方法（了解）</h2>
+<h2 id="anchor_12">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_12" name="anchor_12">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>11. 需求预测的主要方法（了解）
+</h2>
 <ol>
 <li>以问卷为基础的健康评估</li>
 <li>以医疗卫生花费为基础的评估</li>
 </ol>
-<h2 id="anchor_13"><a class="anchor-navigation-ex-anchor" href="#anchor_13" name="anchor_13"><i aria-hidden="true" class="fa fa-link"></i></a>12. 疾病管理的概念（掌握）</h2>
+<h2 id="anchor_13">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_13" name="anchor_13">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>12. 疾病管理的概念（掌握）
+</h2>
 <p>疾病管理是一个协调医疗保健干预和患者沟通的系统，它强调患者自我保健的重要性。</p>
-<h2 id="anchor_14"><a class="anchor-navigation-ex-anchor" href="#anchor_14" name="anchor_14"><i aria-hidden="true" class="fa fa-link"></i></a>13. 疾病管理的主要特点（掌握）</h2>
+<h2 id="anchor_14">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_14" name="anchor_14">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>13. 疾病管理的主要特点（掌握）
+</h2>
 <ol>
 <li>目标人群是患有特定疾病的个体</li>
 <li>关注个体或群体连续性的健康状况与生活质量</li>
 <li>医疗卫生服务及干预措施的综合协调至关重要。</li>
 </ol>
-<h2 id="anchor_15"><a class="anchor-navigation-ex-anchor" href="#anchor_15" name="anchor_15"><i aria-hidden="true" class="fa fa-link"></i></a>14. 残疾管理的目的（了解）</h2>
+<h2 id="anchor_15">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_15" name="anchor_15">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>14. 残疾管理的目的（了解）
+</h2>
 <p>减少工作地点发生残疾事故的频率和费用代价</p>
-<h2 id="anchor_16"><a class="anchor-navigation-ex-anchor" href="#anchor_16" name="anchor_16"><i aria-hidden="true" class="fa fa-link"></i></a>15. 综合的群体健康管理的要点（熟悉）</h2>
+<h2 id="anchor_16">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_16" name="anchor_16">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>15. 综合的群体健康管理的要点（熟悉）
+</h2>
 <p>综合的人群健康管理通过协调不同的健康管理策略来对个体提供更为全面的健康和福利管理。</p>
 <p>成功的关键在于系统性收集健康状况、健康风险、疾病严重程度等方面的信息，以及评估这些信息和临床及经济结局的关联以确定健康、伤残、疾病、并发症、返回工作岗位或恢复正常功能的可能性。</p>
 <p>人群健康管理方法包括一级预防、二级预防和三级预防。</p>
-<h2 id="anchor_17"><a class="anchor-navigation-ex-anchor" href="#anchor_17" name="anchor_17"><i aria-hidden="true" class="fa fa-link"></i></a>16. 中国迫切需要健康管理的主要表现（熟悉）</h2>
+<h2 id="anchor_17">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_17" name="anchor_17">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>16. 中国迫切需要健康管理的主要表现（熟悉）
+</h2>
 <ol>
 <li>人口老龄化起步晚，速度快，数量大。</li>
 <li>慢性疾病患病率迅速上升，慢性病相关危险因素的流行日益严重。</li>
 <li>慢性病的疾病负担。</li>
 <li>健康保障模式的改变。</li>
 </ol>
-<h2 id="anchor_18"><a class="anchor-navigation-ex-anchor" href="#anchor_18" name="anchor_18"><i aria-hidden="true" class="fa fa-link"></i></a>17. 健康管理对于推进医改工作的意义（熟悉）</h2>
+<h2 id="anchor_18">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_18" name="anchor_18">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>17. 健康管理对于推进医改工作的意义（熟悉）
+</h2>
 <p>我国的健康管理主要的任务是，在新的医疗体制改革方案和“健康中国 2020 战略”总体框架下，静静围绕我国政府建设高水平小康型社会的总体要求，创立现代健康管理创新体系，创新服务模式与技术手段，使慢性非传染性疾病得到有效控制，在实现大幅度提高国民健康素质与健康人口构成比例，提高国民平均期望寿命和健康寿命中发挥重要作用，使健康管理</p>
 <p>相关产业成为国家拉动内需，扩大消费的民生工程核心的支柱产业之一。使健康管理成为引领和推动中国科技与产业发展的重要领域，最终实现健康管理与健康服务大国。</p>
-<h2 id="anchor_19"><a class="anchor-navigation-ex-anchor" href="#anchor_19" name="anchor_19"><i aria-hidden="true" class="fa fa-link"></i></a>18. 健康与生产力管理的概念、基本原理及测量方法（熟悉）</h2>
+<h2 id="anchor_19">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_19" name="anchor_19">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>18. 健康与生产力管理的概念、基本原理及测量方法（熟悉）
+</h2>
 <ul>
 <li>
 <p>概念：</p>
@@ -188,9 +264,17 @@
 <p>健康指标的检测；工作限制问卷（WLQ）。</p>
 </li>
 </ul>
-<h2 id="anchor_20"><a class="anchor-navigation-ex-anchor" href="#anchor_20" name="anchor_20"><i aria-hidden="true" class="fa fa-link"></i></a>19. 基本卫生保健的概念（掌握）</h2>
+<h2 id="anchor_20">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_20" name="anchor_20">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>19. 基本卫生保健的概念（掌握）
+</h2>
 <p>指最基本的、人人都能得到的、体现社会平等权利的、人民群众和政府都能负担起和全社会积极参与的卫生保健服务。</p>
-<h2 id="anchor_21"><a class="anchor-navigation-ex-anchor" href="#anchor_21" name="anchor_21"><i aria-hidden="true" class="fa fa-link"></i></a>20. 基本卫生保健的原则（熟悉）</h2>
+<h2 id="anchor_21">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_21" name="anchor_21">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>20. 基本卫生保健的原则（熟悉）
+</h2>
 <ol>
 <li>合理布局：即使人人接受卫生服务的机会均等。</li>
 <li>社区参与：即社区主动参与有关本地区卫生保健的决策。</li>
@@ -198,7 +282,11 @@
 <li>适宜技术：卫生系统中使用的方法和物资应是能被接受的和适用的。</li>
 <li>综合利用：卫生服务仅仅是所有保健工作的一部分，应与营养、教育、饮用水供给、住房同属于人类生活中最基本和最低的需要。</li>
 </ol>
-<h2 id="anchor_22"><a class="anchor-navigation-ex-anchor" href="#anchor_22" name="anchor_22"><i aria-hidden="true" class="fa fa-link"></i></a>21. 基本卫生保健的内容（掌握）</h2>
+<h2 id="anchor_22">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_22" name="anchor_22">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>21. 基本卫生保健的内容（掌握）
+</h2>
 <p>根据《阿拉木图宣言》基本卫生保健工作可分为四个方面、八项内容。</p>
 <ul>
 <li>
@@ -224,16 +312,28 @@
 </ol>
 </li>
 </ul>
-<h2 id="anchor_23"><a class="anchor-navigation-ex-anchor" href="#anchor_23" name="anchor_23"><i aria-hidden="true" class="fa fa-link"></i></a>22. 基本卫生保健的特点（了解）</h2>
+<h2 id="anchor_23">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_23" name="anchor_23">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>22. 基本卫生保健的特点（了解）
+</h2>
 <p>社会性、群众性、艰巨性、长期性</p>
-<h2 id="anchor_24"><a class="anchor-navigation-ex-anchor" href="#anchor_24" name="anchor_24"><i aria-hidden="true" class="fa fa-link"></i></a>23. 基本卫生保健的意义（了解）</h2>
+<h2 id="anchor_24">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_24" name="anchor_24">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>23. 基本卫生保健的意义（了解）
+</h2>
 <ol>
 <li>充分享有健康权</li>
 <li>促进社会经济发展</li>
 <li>提高人人健康水平</li>
 <li>提高精神文明水平</li>
 </ol>
-<h2 id="anchor_25"><a class="anchor-navigation-ex-anchor" href="#anchor_25" name="anchor_25"><i aria-hidden="true" class="fa fa-link"></i></a>24. 中国特色的“治未病与健康管理”模式（了解）</h2>
+<h2 id="anchor_25">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_25" name="anchor_25">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>24. 中国特色的“治未病与健康管理”模式（了解）
+</h2>
 <p>中医治未病与健康管理：模式是“循证为依据，为健康管理提供安全、有效、方便、价廉的检测技术评估，利用云平台，适时监控，构建 i-city 智能健康城市”。</p>
 
                         <footer class="page-footer">
