--- a/md/基础知识/02.html
+++ b/md/基础知识/02.html
@@ -79,8 +79,16 @@
                 <div class="search-noresults">
                     <section class="normal markdown-section">
                         <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第二章 临床医学基础知识</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>临床医学的学科分类和主要特征（了解）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>临床医学的主要特征（了解）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>临床医学的发展趋势（了解）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>4. </b>循证医学的概念及核心内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>5. </b>问诊和病史采集的主要内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_7'><b>6. </b>体格检查的基本方法（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_8'><b>7. </b>临床实验室检查的主要内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_9'><b>8. </b>疾病的 X 线图像改变（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_10'><b>9. </b>CT 检查的优缺点（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_11'><b>10. </b>超声检查的主要用途（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_12'><b>11. </b>磁共振成像（MRI）图像的优缺点（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_13'><b>12. </b>心电图检查的临床应用（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_14'><b>13. </b>内镜检查的临床应用（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_15'><b>14. </b>药品的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_16'><b>15. </b>合理使用抗生素应遵循的原则（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_17'><b>16. </b>介入治疗的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_18'><b>17. </b>放射治疗的原理及副作用（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_19'><b>18. </b>物理疗法的临床应用（掌握）</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
-                        <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第二章 临床医学基础知识</h1>
-<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 临床医学的学科分类和主要特征（了解）</h2>
+                        <h1 id="anchor_1">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>第二章 临床医学基础知识
+</h1>
+<h2 id="anchor_2">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>1. 临床医学的学科分类和主要特征（了解）
+</h2>
 <ol>
 <li>按治疗手段建立的学科</li>
 <li>按治疗对象建立的学科</li>
@@ -88,23 +96,39 @@
 <li>按病种建立的学科</li>
 <li>按诊断手段建立的学科</li>
 </ol>
-<h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 临床医学的主要特征（了解）</h2>
+<h2 id="anchor_3">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>2. 临床医学的主要特征（了解）
+</h2>
 <ol>
 <li>临床医学研究和服务的对象是人</li>
 <li>临床工作具有探索性</li>
 <li>临床医学启动医学研究</li>
 <li>临床医学检验医学成果</li>
 </ol>
-<h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 临床医学的发展趋势（了解）</h2>
+<h2 id="anchor_4">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>3. 临床医学的发展趋势（了解）
+</h2>
 <ol>
 <li>微观深入与宏观扩展</li>
 <li>学科体系分化与综合</li>
 <li>医学与高科技的结合日趋密切</li>
 </ol>
-<h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>4. 循证医学的概念及核心内容（掌握）</h2>
+<h2 id="anchor_5">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>4. 循证医学的概念及核心内容（掌握）
+</h2>
 <p>循证医学通常的定义是：应用最多的有关信息（最佳的证据），通过谨慎、明确和明智的确认和评估，做出医学决策的实践活动。</p>
 <p>核心内容：医生对患者建议或实施任何诊断、治疗或预防保健措施，都要尽可能基于可靠的证据、证明这种措施确实对患者有益，并且尽可能有较好的成本 - 效益比。</p>
-<h2 id="anchor_6"><a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6"><i aria-hidden="true" class="fa fa-link"></i></a>5. 问诊和病史采集的主要内容（掌握）</h2>
+<h2 id="anchor_6">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>5. 问诊和病史采集的主要内容（掌握）
+</h2>
 <ol>
 <li>患者一般情况</li>
 <li>主诉</li>
@@ -113,7 +137,11 @@
 <li>个人史和家族史</li>
 <li>（女性）月经和生育史</li>
 </ol>
-<h2 id="anchor_7"><a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7"><i aria-hidden="true" class="fa fa-link"></i></a>6. 体格检查的基本方法（掌握）</h2>
+<h2 id="anchor_7">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>6. 体格检查的基本方法（掌握）
+</h2>
 <ol>
 <li>视诊</li>
 <li>触诊</li>
@@ -121,7 +149,11 @@
 <li>听诊</li>
 </ol>
 <p>俗称：望触叩听</p>
-<h2 id="anchor_8"><a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8"><i aria-hidden="true" class="fa fa-link"></i></a>7. 临床实验室检查的主要内容（掌握）</h2>
+<h2 id="anchor_8">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>7. 临床实验室检查的主要内容（掌握）
+</h2>
 <ol>
 <li>血液检验</li>
 <li>体液与排泄物检验</li>
@@ -129,7 +161,11 @@
 <li>免疫学检验</li>
 <li>病原学检验</li>
 </ol>
-<h2 id="anchor_9"><a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9"><i aria-hidden="true" class="fa fa-link"></i></a>8. 疾病的 X 线图像改变（掌握）</h2>
+<h2 id="anchor_9">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>8. 疾病的 X 线图像改变（掌握）
+</h2>
 <p>疾病 X 线图像改变：</p>
 <ol>
 <li>大小改变</li>
@@ -139,7 +175,11 @@
 <li>密度改变</li>
 <li>功能改变</li>
 </ol>
-<h2 id="anchor_10"><a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10"><i aria-hidden="true" class="fa fa-link"></i></a>9. CT 检查的优缺点（掌握）</h2>
+<h2 id="anchor_10">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>9. CT 检查的优缺点（掌握）
+</h2>
 <ul>
 <li>
 <p>优点：</p>
@@ -150,7 +190,11 @@
 <p>CT 检查是有射线的检查方法，较难发现器官组织结构的功能变化，个别部位如颅底部骨伪影可影响后颅凹脑组织检查；因成像野的限制，不宜检查四肢小关节，难以显示空腔器官的黏膜变化；做强化扫描时有造影剂的不良反应存在。</p>
 </li>
 </ul>
-<h2 id="anchor_11"><a class="anchor-navigation-ex-anchor" href="#anchor_11" name="anchor_11"><i aria-hidden="true" class="fa fa-link"></i></a>10. 超声检查的主要用途（掌握）</h2>
+<h2 id="anchor_11">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_11" name="anchor_11">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>10. 超声检查的主要用途（掌握）
+</h2>
 <ol>
 <li>检测实质性脏器的大小、形态及物理特性。</li>
 <li>检测某些囊性器官的形态、走向及功能形态。</li>
@@ -160,7 +204,11 @@
 <li>产科可确定妊娠，判断胎位、胎儿数量；确定胎龄，评价胎儿生长发育情况；发现胎儿畸形；评定胎儿生理功能等。</li>
 <li>在超声引导下进行穿刺做针吸细胞学或组织活检，或进行某些引流及药物注入治疗。</li>
 </ol>
-<h2 id="anchor_12"><a class="anchor-navigation-ex-anchor" href="#anchor_12" name="anchor_12"><i aria-hidden="true" class="fa fa-link"></i></a>11. 磁共振成像（MRI）图像的优缺点（掌握）</h2>
+<h2 id="anchor_12">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_12" name="anchor_12">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>11. 磁共振成像（MRI）图像的优缺点（掌握）
+</h2>
 <ul>
 <li>
 <p>优点：</p>
@@ -181,23 +229,39 @@
 </ol>
 </li>
 </ul>
-<h2 id="anchor_13"><a class="anchor-navigation-ex-anchor" href="#anchor_13" name="anchor_13"><i aria-hidden="true" class="fa fa-link"></i></a>12. 心电图检查的临床应用（掌握）</h2>
+<h2 id="anchor_13">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_13" name="anchor_13">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>12. 心电图检查的临床应用（掌握）
+</h2>
 <p>心电图主要应用于心脏疾病的诊断，还广泛应用于各种危重患者的抢救、手术麻醉、药物作用和电解质紊乱的监测、航天、登山运动员的心电监测等。</p>
 <ol>
 <li>诊断各种心律失常和心脏传导障碍。</li>
 <li>心肌梗塞的特征性心电图改变和演变是诊断的可靠依据。</li>
 <li>对房室肥大心肌受损和心肌缺血的诊断有帮助。</li>
 </ol>
-<h2 id="anchor_14"><a class="anchor-navigation-ex-anchor" href="#anchor_14" name="anchor_14"><i aria-hidden="true" class="fa fa-link"></i></a>13. 内镜检查的临床应用（掌握）</h2>
+<h2 id="anchor_14">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_14" name="anchor_14">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>13. 内镜检查的临床应用（掌握）
+</h2>
 <p>借助内镜科直接观察到脏器内腔病变，确定其部位、范围，并可进行照相、活检及进行某些治疗，内镜应用最广者是消化道和支气管的检查。</p>
 <ul>
 <li>上消化道内镜检查范围：食管、胃、十二指肠</li>
 <li>下消化道内镜检查范围：结肠、小肠</li>
 <li>纤维支气管镜检查范围：气管、支气管</li>
 </ul>
-<h2 id="anchor_15"><a class="anchor-navigation-ex-anchor" href="#anchor_15" name="anchor_15"><i aria-hidden="true" class="fa fa-link"></i></a>14. 药品的概念（掌握）</h2>
+<h2 id="anchor_15">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_15" name="anchor_15">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>14. 药品的概念（掌握）
+</h2>
 <p>我国管理部门对药品的定义为：用于预防、治疗、诊断人的疾病，有目的地调节人的生理功能并规定有适应证或者主治、用法和用量的物质，包括中药材、中药饮片、中成药、化学原料药及其制剂、抗生素、生化药品、放射性药品、血清、疫苗、血液制品和针对药品等。</p>
-<h2 id="anchor_16"><a class="anchor-navigation-ex-anchor" href="#anchor_16" name="anchor_16"><i aria-hidden="true" class="fa fa-link"></i></a>15. 合理使用抗生素应遵循的原则（掌握）</h2>
+<h2 id="anchor_16">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_16" name="anchor_16">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>15. 合理使用抗生素应遵循的原则（掌握）
+</h2>
 <p>合理使用抗生素包括合理选药和合理用药两方面。</p>
 <ul>
 <li>
@@ -210,9 +274,17 @@
 <p>按照药物的抗菌作用特点及其体内过程特点选择用药。</p>
 </li>
 </ul>
-<h2 id="anchor_17"><a class="anchor-navigation-ex-anchor" href="#anchor_17" name="anchor_17"><i aria-hidden="true" class="fa fa-link"></i></a>16. 介入治疗的概念（掌握）</h2>
+<h2 id="anchor_17">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_17" name="anchor_17">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>16. 介入治疗的概念（掌握）
+</h2>
 <p>介入治疗是指在医学影像或内镜的导向下，利用经皮穿刺和导管技术，通过药物、物理、 化学等手段直接消除或减轻局部病变，从而达到治疗目的。具有微创、可重复性强、定位准确等特点。</p>
-<h2 id="anchor_18"><a class="anchor-navigation-ex-anchor" href="#anchor_18" name="anchor_18"><i aria-hidden="true" class="fa fa-link"></i></a>17. 放射治疗的原理及副作用（掌握）</h2>
+<h2 id="anchor_18">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_18" name="anchor_18">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>17. 放射治疗的原理及副作用（掌握）
+</h2>
 <p>放射治疗是利用放射性如放射性同位素产生的α、β、γ射线和各类 X 线治疗机或加速器产生的 X 线、电子束、质子束及其他粒子束等治疗疾病。</p>
 <p>放射治疗的副作用包括：</p>
 <ol>
@@ -220,7 +292,11 @@
 <li>胃肠系统表现为食欲缺乏、厌食、恶心、呕吐等；</li>
 <li>神经系统症状为乏力、嗜睡或失眠等。</li>
 </ol>
-<h2 id="anchor_19"><a class="anchor-navigation-ex-anchor" href="#anchor_19" name="anchor_19"><i aria-hidden="true" class="fa fa-link"></i></a>18. 物理疗法的临床应用（掌握）</h2>
+<h2 id="anchor_19">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_19" name="anchor_19">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>18. 物理疗法的临床应用（掌握）
+</h2>
 <p>物理治疗广泛用于：</p>
 <ol>
 <li>各种炎症尤其是慢性炎症的恢复治疗；</li>
