--- a/md/基础知识/03.html
+++ b/md/基础知识/03.html
@@ -79,43 +79,95 @@
                 <div class="search-noresults">
                     <section class="normal markdown-section">
                         <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第三章 预防医学基础知识</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>影响健康因素（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>三级预防策略的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>第一级预防的内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>4. </b>第二级预防的内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>5. </b>第三级预防的内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_7'><b>6. </b>临床预防服务的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_8'><b>7. </b>临床预防服务的主要内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_9'><b>8. </b>健康危险因素评价的主要内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_10'><b>9. </b>健康维护计划的主要内容？（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_11'><b>10. </b>社区的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_12'><b>11. </b>社区公共卫生的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_13'><b>12. </b>国家基本公共卫生服务的要点（掌握）</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
-                        <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第三章 预防医学基础知识</h1>
-<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 影响健康因素（掌握）</h2>
+                        <h1 id="anchor_1">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>第三章 预防医学基础知识
+</h1>
+<h2 id="anchor_2">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>1. 影响健康因素（掌握）
+</h2>
 <ol>
 <li>环境因素</li>
 <li>行为与生活方式因素</li>
 <li>生物遗传因素</li>
 <li>卫生服务</li>
 </ol>
-<h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 三级预防策略的概念（掌握）</h2>
+<h2 id="anchor_3">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>2. 三级预防策略的概念（掌握）
+</h2>
 <p>根据疾病发生发展过程以及健康决定因素的特点，针对疾病发生、发展或恶化的不同阶段分别采取病因预防、“三早”预防和临床预防等三种预防措施，由于三种预防措施是连续的梯次性预防措施，因而称之为三级预防策略。</p>
-<h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 第一级预防的内容（掌握）</h2>
+<h2 id="anchor_4">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>3. 第一级预防的内容（掌握）
+</h2>
 <p>又称病因预防，即消除有害因素、控制致病条件。</p>
 <p>包括两方面：一是针对健康个体的措施，二是针对整个公众的社会措施，即针对公众健康所采取的社会和环境措施。</p>
-<h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>4. 第二级预防的内容（掌握）</h2>
+<h2 id="anchor_5">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>4. 第二级预防的内容（掌握）
+</h2>
 <p>又称临床前期预防，即早发现、早诊断、早处理的“三早”。</p>
 <p>对于传染病，除了“三早”，尚需早报告及早隔离，即“五早”。</p>
-<h2 id="anchor_6"><a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6"><i aria-hidden="true" class="fa fa-link"></i></a>5. 第三级预防的内容（掌握）</h2>
+<h2 id="anchor_6">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>5. 第三级预防的内容（掌握）
+</h2>
 <p>又称临床预防，即预防恶化、促进康复。</p>
 <p>对已患某些疾病的人，采取及时、有效的措施，防止病情恶化，预防并发症和伤残；对于已丧失劳动力或伤残者，主要促使功能恢复和心理康复，进行家庭护理指导，使患者尽量恢复生活和劳动能力，能参加社会活动并延长寿命。</p>
-<h2 id="anchor_7"><a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7"><i aria-hidden="true" class="fa fa-link"></i></a>6. 临床预防服务的概念（掌握）</h2>
+<h2 id="anchor_7">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>6. 临床预防服务的概念（掌握）
+</h2>
 <p>临床预防服务指在临床场所对健康者和无症状的“患者”病伤危险因素进行评价，然后实施个体的干预措施来促进健康和预防疾病。</p>
-<h2 id="anchor_8"><a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8"><i aria-hidden="true" class="fa fa-link"></i></a>7. 临床预防服务的主要内容（掌握）</h2>
+<h2 id="anchor_8">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>7. 临床预防服务的主要内容（掌握）
+</h2>
 <ol>
 <li>健康咨询</li>
 <li>健康筛检</li>
 <li>化学预防</li>
 </ol>
-<h2 id="anchor_9"><a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9"><i aria-hidden="true" class="fa fa-link"></i></a>8. 健康危险因素评价的主要内容（掌握）</h2>
+<h2 id="anchor_9">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>8. 健康危险因素评价的主要内容（掌握）
+</h2>
 <p>健康危险因素评价指在临床工作中从采集病史、体格检查和实验室检查等过程中收集有关个体的危险因素信息，为下一步对危险因素的个体化干预提供依据。</p>
-<h2 id="anchor_10"><a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10"><i aria-hidden="true" class="fa fa-link"></i></a>9. 健康维护计划的主要内容？（掌握）</h2>
+<h2 id="anchor_10">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>9. 健康维护计划的主要内容？（掌握）
+</h2>
 <p>健康维护计划的一个重要内容是根据危险因素的评估以及患者的性别、年龄的信息，确定干预的措施，包括健康咨询、健康筛检、免疫接种和化学预防。</p>
-<h2 id="anchor_11"><a class="anchor-navigation-ex-anchor" href="#anchor_11" name="anchor_11"><i aria-hidden="true" class="fa fa-link"></i></a>10. 社区的概念（掌握）</h2>
+<h2 id="anchor_11">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_11" name="anchor_11">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>10. 社区的概念（掌握）
+</h2>
 <p>社区是指若干社会群体（家庭、氏族）或社会组织（机关、团体）聚集在某一地域里所形成的一个生活上相关联的大集体。</p>
 <p>其成员有着共同的兴趣，彼此认识且互相来往，行使社会功能，创造社会规范，形成特有的价值体系和社会福利事业。</p>
-<h2 id="anchor_12"><a class="anchor-navigation-ex-anchor" href="#anchor_12" name="anchor_12"><i aria-hidden="true" class="fa fa-link"></i></a>11. 社区公共卫生的概念（掌握）</h2>
+<h2 id="anchor_12">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_12" name="anchor_12">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>11. 社区公共卫生的概念（掌握）
+</h2>
 <p>社区公共卫生是人群健康的策略和原则在社区水平上的具体应用，即根据社区全体居民的健康和疾病的问题，开展有针对性的健康保护、健康促进以及疾病预防的项目，促进社区人群健康水平和提高生活质量，实现人群健康的均等化。</p>
-<h2 id="anchor_13"><a class="anchor-navigation-ex-anchor" href="#anchor_13" name="anchor_13"><i aria-hidden="true" class="fa fa-link"></i></a>12. 国家基本公共卫生服务的要点（掌握）</h2>
+<h2 id="anchor_13">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_13" name="anchor_13">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>12. 国家基本公共卫生服务的要点（掌握）
+</h2>
 <p>《国家基本公共卫生服务项目（2011 年版）》包括：</p>
 <ol>
 <li>城乡居民健康档案管理</li>
