--- a/md/基础知识/06.html
+++ b/md/基础知识/06.html
@@ -79,14 +79,30 @@
                 <div class="search-noresults">
                     <section class="normal markdown-section">
                         <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第六章 健康教育学</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>健康教育的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>健康促进的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>健康促进涉及的主要活动领域（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>4. </b>健康教育与健康促进的关系（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>5. </b>健康教育与健康管理的区别和联系（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_7'><b>6. </b>“知信行”模式 (KAP) 的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_8'><b>7. </b>健康信念模式 (HBM) 的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_9'><b>8. </b>健康信念模式 (HBM) 的内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_10'><b>9. </b>自我效能的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_11'><b>10. </b>行为改变的 5 个阶段（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_12'><b>11. </b>传播的概念（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_13'><b>12. </b>五因素传播模式的要点（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_14'><b>13. </b>人际传播的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_15'><b>14. </b>人际传播的特点（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_16'><b>15. </b>大众传播的概念（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_17'><b>16. </b>大众传播的特点（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_18'><b>17. </b>制作传播材料应遵循的程序（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_19'><b>18. </b>常用人际传播形式（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_20'><b>19. </b>针对个体的传播材料的主要类型（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_21'><b>20. </b>针对群体的传播材料的主要类型（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_22'><b>21. </b>针对大众的主要传播媒介（了解）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_23'><b>22. </b>新型传播媒介的主要类型（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_24'><b>23. </b>precede-proceed 模式的主要内容（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_25'><b>24. </b>健康教育需求评估的主要内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_26'><b>25. </b>行为诊断应遵循的主要程序（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_27'><b>26. </b>影响健康行为的三个因素（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_28'><b>27. </b>制定健康教育计划具体目标应遵循的原则（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_29'><b>28. </b>健康教育干预策略的主要方面（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_30'><b>29. </b>实施健康教育计划的主要工作（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_31'><b>30. </b>健康教育计划评价的主要内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_32'><b>31. </b>健康教育常见的评价方案（熟悉）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_33'><b>32. </b>健康相关行为改变的理论模式</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
-                        <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第六章 健康教育学</h1>
-<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 健康教育的概念（掌握）</h2>
+                        <h1 id="anchor_1">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>第六章 健康教育学
+</h1>
+<h2 id="anchor_2">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>1. 健康教育的概念（掌握）
+</h2>
 <p>通过信息传播和行为干预，帮助个体和全体掌握卫生保健知识、树立健康观念，自愿采纳有利的健康行为和生活方式的教育活动与过程，其目的是消除或减轻影响健康的危险因素，预防疾病，促进健康和提高生活质量。</p>
-<h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 健康促进的概念（掌握）</h2>
+<h2 id="anchor_3">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>2. 健康促进的概念（掌握）
+</h2>
 <p>健康促进是促进人们维护和提高他们自身健康的过程，是协调人类与他们环境之间的战略，规定个人与社会对健康各自所负的责任。</p>
 <p>健康促进是指一切能促进行为和生活条件向有益于健康改变的教育与环境支持的综合体。</p>
 <p>包含了个人和群体的行为改变，以及政府行为（社会环境）改变两个方面。</p>
-<h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 健康促进涉及的主要活动领域（掌握）</h2>
+<h2 id="anchor_4">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>3. 健康促进涉及的主要活动领域（掌握）
+</h2>
 <ol>
 <li>建立促进健康的公共政策；</li>
 <li>创造健康支持环境；</li>
@@ -94,20 +110,40 @@
 <li>发展个人技能；</li>
 <li>调整卫生服务方向。</li>
 </ol>
-<h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>4. 健康教育与健康促进的关系（熟悉）</h2>
+<h2 id="anchor_5">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>4. 健康教育与健康促进的关系（熟悉）
+</h2>
 <p>健康促进是一个综合的调动教育、社会、经济和政治的广泛力量，改善人群健康的活动过程。</p>
 <p>健康教育是健康促进的基础和先导。离开了健康教育，健康促进就会是无源之水，无本之木。</p>
 <p>同时，健康促进对健康教育是强有力的支撑，而健康教育如不向健康促进发展，其作用就会受到极大限制。</p>
-<h2 id="anchor_6"><a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6"><i aria-hidden="true" class="fa fa-link"></i></a>5. 健康教育与健康管理的区别和联系（掌握）</h2>
+<h2 id="anchor_6">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>5. 健康教育与健康管理的区别和联系（掌握）
+</h2>
 <p>两者都运用了基线资料收集 - 需求评估 - 干预实施 - 效果评价的管理过程，只不过健康教育主要侧重在知识、态度、信念、行为方面，而健康管理还重视从体格检查的资料获得信息、</p>
 <p>强调对生活方式和行为的长期、连续的管理。</p>
-<h2 id="anchor_7"><a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7"><i aria-hidden="true" class="fa fa-link"></i></a>6. “知信行”模式 (KAP) 的概念（掌握）</h2>
+<h2 id="anchor_7">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>6. “知信行”模式 (KAP) 的概念（掌握）
+</h2>
 <p>“知信行”是知识、信念和行为的简称，健康教育的知 - 信 - 行（KABP 或 KAP）模式认为：卫生保健知识和信息是建立积极、正确的信念与态度，进而改变健康相关行为的基础，而信念和态度则是行为改变的动力。</p>
 <p>以知识为基础，以信念为动力，以行为为目标</p>
-<h2 id="anchor_8"><a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8"><i aria-hidden="true" class="fa fa-link"></i></a>7. 健康信念模式 (HBM) 的概念（掌握）</h2>
+<h2 id="anchor_8">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>7. 健康信念模式 (HBM) 的概念（掌握）
+</h2>
 <p>理论强调感知在决策中的重要性，影响感知的因素很多，是运用社会心理学方法解释健康相关行为的理论模式。</p>
 <p>健康信念模式强调，人们在决定是否采纳某健康行为时，首先要对疾病的威胁进行判断，然后对预防疾病的价值、采纳健康行为对改善健康状况的期望和克服行动障碍的能力作出判断，最后才会作出是否采纳健康行为的决定。</p>
-<h2 id="anchor_9"><a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9"><i aria-hidden="true" class="fa fa-link"></i></a>8. 健康信念模式 (HBM) 的内容（掌握）</h2>
+<h2 id="anchor_9">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>8. 健康信念模式 (HBM) 的内容（掌握）
+</h2>
 <ol>
 <li>感知疾病的威胁：①疾病的易感性②感知疾病的严重性</li>
 <li>感知健康行为的益处和障碍：
@@ -121,10 +157,18 @@
 <li>社会人口学因素（一般可以不提 4、5 二点）</li>
 </ol>
 <p><a data-lightbox="1" href="../../screenshot/2021-01-06-11-13-41.png"><img src="../../screenshot/2021-01-06-11-13-41.png" alt="健康信念模式" title="健康信念模式" /></a></p>
-<h2 id="anchor_10"><a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10"><i aria-hidden="true" class="fa fa-link"></i></a>9. 自我效能的概念（掌握）</h2>
+<h2 id="anchor_10">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>9. 自我效能的概念（掌握）
+</h2>
 <p>指个体对自己组织、执行某特定行为并达到预期结果的能力的主观判断。</p>
 <p>即个体对自己有能力控制内、外因素而成功采纳健康行为并取得期望结果的自信心、自我控制能力。</p>
-<h2 id="anchor_11"><a class="anchor-navigation-ex-anchor" href="#anchor_11" name="anchor_11"><i aria-hidden="true" class="fa fa-link"></i></a>10. 行为改变的 5 个阶段（掌握）</h2>
+<h2 id="anchor_11">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_11" name="anchor_11">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>10. 行为改变的 5 个阶段（掌握）
+</h2>
 <ol>
 <li>没有打算阶段</li>
 <li>打算阶段</li>
@@ -134,9 +178,17 @@
 <li>对于成瘾行为</li>
 </ol>
 <p>还有第六个阶段，即终止阶段</p>
-<h2 id="anchor_12"><a class="anchor-navigation-ex-anchor" href="#anchor_12" name="anchor_12"><i aria-hidden="true" class="fa fa-link"></i></a>11. 传播的概念（熟悉）</h2>
+<h2 id="anchor_12">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_12" name="anchor_12">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>11. 传播的概念（熟悉）
+</h2>
 <p>通常是指人与人之间通过一定的符号进行的信息交流与分享，是人类普遍存在的一种社会行为。</p>
-<h2 id="anchor_13"><a class="anchor-navigation-ex-anchor" href="#anchor_13" name="anchor_13"><i aria-hidden="true" class="fa fa-link"></i></a>12. 五因素传播模式的要点（熟悉）</h2>
+<h2 id="anchor_13">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_13" name="anchor_13">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>12. 五因素传播模式的要点（熟悉）
+</h2>
 <p>拉斯韦尔五因素传播模式即“一个描述传播行为的简单方法，就是回答下列 5 个问题：</p>
 <ol>
 <li>谁（who）</li>
@@ -153,10 +205,18 @@
 <li>受传者（受众研究）</li>
 <li>效果（效果研究）</li>
 </ol>
-<h2 id="anchor_14"><a class="anchor-navigation-ex-anchor" href="#anchor_14" name="anchor_14"><i aria-hidden="true" class="fa fa-link"></i></a>13. 人际传播的概念（掌握）</h2>
+<h2 id="anchor_14">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_14" name="anchor_14">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>13. 人际传播的概念（掌握）
+</h2>
 <p>人际传播也称人际交流，是指人与人之间进行直接信息沟通的一类交流活动。</p>
 <p>人际传播可以分成个人之间，个人与群体之间，群体与群体之间三种形式。</p>
-<h2 id="anchor_15"><a class="anchor-navigation-ex-anchor" href="#anchor_15" name="anchor_15"><i aria-hidden="true" class="fa fa-link"></i></a>14. 人际传播的特点（掌握）</h2>
+<h2 id="anchor_15">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_15" name="anchor_15">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>14. 人际传播的特点（掌握）
+</h2>
 <ol>
 <li>直接的人际传播不需要任何非自然的媒介。</li>
 <li>在同一次人际传播活动中，交流的双方可以互为传播者和受传者。</li>
@@ -164,9 +224,17 @@
 <li>相对大众传播而言，信息量比较少，覆盖范围比较小，传播速度比较慢。</li>
 <li>在多级的人际传播活动中，信息容易走样。</li>
 </ol>
-<h2 id="anchor_16"><a class="anchor-navigation-ex-anchor" href="#anchor_16" name="anchor_16"><i aria-hidden="true" class="fa fa-link"></i></a>15. 大众传播的概念（熟悉）</h2>
+<h2 id="anchor_16">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_16" name="anchor_16">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>15. 大众传播的概念（熟悉）
+</h2>
 <p>大众传播是指职业性信息传播机构和人员通过广播、电视、电影、报纸、期刊、书籍等大众媒介和特定传播技术手段，向范围广泛、为数众多的社会人群传递信息的过程。</p>
-<h2 id="anchor_17"><a class="anchor-navigation-ex-anchor" href="#anchor_17" name="anchor_17"><i aria-hidden="true" class="fa fa-link"></i></a>16. 大众传播的特点（熟悉）</h2>
+<h2 id="anchor_17">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_17" name="anchor_17">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>16. 大众传播的特点（熟悉）
+</h2>
 <ol>
 <li>传播者是职业性的传播机构和人员，并需要借助非自然的特定传播技术手段。</li>
 <li>信息时公开的、公共的，面向全社会人群。</li>
@@ -174,7 +242,11 @@
 <li>对象虽然为数众多，分散广泛，互不联系，但从总体上来说是大体确定的。</li>
 <li>单向的，很难互换传受角色，信息反馈速度缓慢而且缺乏自发性。</li>
 </ol>
-<h2 id="anchor_18"><a class="anchor-navigation-ex-anchor" href="#anchor_18" name="anchor_18"><i aria-hidden="true" class="fa fa-link"></i></a>17. 制作传播材料应遵循的程序（熟悉）</h2>
+<h2 id="anchor_18">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_18" name="anchor_18">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>17. 制作传播材料应遵循的程序（熟悉）
+</h2>
 <ol>
 <li>分析需求和确定信息</li>
 <li>制定计划</li>
@@ -183,24 +255,52 @@
 <li>材料的生产发放与使用</li>
 <li>监测与评价</li>
 </ol>
-<h2 id="anchor_19"><a class="anchor-navigation-ex-anchor" href="#anchor_19" name="anchor_19"><i aria-hidden="true" class="fa fa-link"></i></a>18. 常用人际传播形式（掌握）</h2>
+<h2 id="anchor_19">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_19" name="anchor_19">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>18. 常用人际传播形式（掌握）
+</h2>
 <ol>
 <li>讲课（咨询）</li>
 <li>同伴教育</li>
 <li>演示与示范</li>
 </ol>
-<h2 id="anchor_20"><a class="anchor-navigation-ex-anchor" href="#anchor_20" name="anchor_20"><i aria-hidden="true" class="fa fa-link"></i></a>19. 针对个体的传播材料的主要类型（熟悉）</h2>
+<h2 id="anchor_20">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_20" name="anchor_20">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>19. 针对个体的传播材料的主要类型（熟悉）
+</h2>
 <p>传单、折页、小册子等供个人阅读观看的材料</p>
-<h2 id="anchor_21"><a class="anchor-navigation-ex-anchor" href="#anchor_21" name="anchor_21"><i aria-hidden="true" class="fa fa-link"></i></a>20. 针对群体的传播材料的主要类型（熟悉）</h2>
+<h2 id="anchor_21">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_21" name="anchor_21">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>20. 针对群体的传播材料的主要类型（熟悉）
+</h2>
 <p>宣传栏、招贴画 / 海报、标语 / 横幅、DVD、报刊 / 杂志、广播、电视等。</p>
-<h2 id="anchor_22"><a class="anchor-navigation-ex-anchor" href="#anchor_22" name="anchor_22"><i aria-hidden="true" class="fa fa-link"></i></a>21. 针对大众的主要传播媒介（了解）</h2>
+<h2 id="anchor_22">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_22" name="anchor_22">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>21. 针对大众的主要传播媒介（了解）
+</h2>
 <p>报纸 / 杂志、广播 / 电视</p>
-<h2 id="anchor_23"><a class="anchor-navigation-ex-anchor" href="#anchor_23" name="anchor_23"><i aria-hidden="true" class="fa fa-link"></i></a>22. 新型传播媒介的主要类型（熟悉）</h2>
+<h2 id="anchor_23">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_23" name="anchor_23">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>22. 新型传播媒介的主要类型（熟悉）
+</h2>
 <p>互联网、手机</p>
-<h2 id="anchor_24"><a class="anchor-navigation-ex-anchor" href="#anchor_24" name="anchor_24"><i aria-hidden="true" class="fa fa-link"></i></a>23. precede-proceed 模式的主要内容（熟悉）</h2>
+<h2 id="anchor_24">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_24" name="anchor_24">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>23. precede-proceed 模式的主要内容（熟悉）
+</h2>
 <p>precede-proceed 模式为计划设计、执行及评价提供一个连续的步骤，precede 着重应用于诊断，即需求评估；proceed 侧重在执行过程与评价过程。其实质是为健康教育计划的设计、实施和评价提供了分析问题和解决问题的方法。</p>
 <p>计划的设计分成社会诊断、流行病学诊断、行为与环境诊断、教育与组织诊断、管理与政策诊断 5 个阶段，其实质就是需求评估。计划的实施主要在第 6 阶段，而计划的评价包含第 6 阶段的过程评价和其后第 7-9 阶段的效果评价阶段。</p>
-<h2 id="anchor_25"><a class="anchor-navigation-ex-anchor" href="#anchor_25" name="anchor_25"><i aria-hidden="true" class="fa fa-link"></i></a>24. 健康教育需求评估的主要内容（掌握）</h2>
+<h2 id="anchor_25">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_25" name="anchor_25">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>24. 健康教育需求评估的主要内容（掌握）
+</h2>
 <p>健康教育需求评估又称为健康教育诊断，根据 PRECEDE--PROCEED 模式，健康教育诊断包括如下内容：</p>
 <ol>
 <li>社会诊断</li>
@@ -209,19 +309,31 @@
 <li>教育与组织诊断</li>
 <li>管理与政策诊断</li>
 </ol>
-<h2 id="anchor_26"><a class="anchor-navigation-ex-anchor" href="#anchor_26" name="anchor_26"><i aria-hidden="true" class="fa fa-link"></i></a>25. 行为诊断应遵循的主要程序（掌握）</h2>
+<h2 id="anchor_26">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_26" name="anchor_26">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>25. 行为诊断应遵循的主要程序（掌握）
+</h2>
 <ol>
 <li>区分引起健康问题的行为与非行为因素</li>
 <li>区别重要行为与不重要行为</li>
 <li>区别高可变性行为与低可变性行为</li>
 </ol>
-<h2 id="anchor_27"><a class="anchor-navigation-ex-anchor" href="#anchor_27" name="anchor_27"><i aria-hidden="true" class="fa fa-link"></i></a>26. 影响健康行为的三个因素（掌握）</h2>
+<h2 id="anchor_27">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_27" name="anchor_27">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>26. 影响健康行为的三个因素（掌握）
+</h2>
 <ol>
 <li>倾向因素：存在于行为之前，是产生某种行为的原因或动机，包括个人或群体的知识、信念、态度、价值观、自信心等。</li>
 <li>促成因素：存在于行为同时，促使动机得以实现的因素，包括技能、卫生资源可得性、社区或政府的法律等。</li>
 <li>强化因素：存在于行为之后，是促使形成的行动得以巩固或戒除的因素，包括奖惩措施。</li>
 </ol>
-<h2 id="anchor_28"><a class="anchor-navigation-ex-anchor" href="#anchor_28" name="anchor_28"><i aria-hidden="true" class="fa fa-link"></i></a>27. 制定健康教育计划具体目标应遵循的原则（掌握）</h2>
+<h2 id="anchor_28">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_28" name="anchor_28">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>27. 制定健康教育计划具体目标应遵循的原则（掌握）
+</h2>
 <p>健康教育计划的具体目标需要包含具体的、量化的、可测量的指标，应该能够回答 4W1H：</p>
 <ul>
 <li>Who—对谁？</li>
@@ -230,13 +342,21 @@
 <li>Where—在什么范围内实现这种变化？</li>
 <li>Howmuch—变化程度多大？</li>
 </ul>
-<h2 id="anchor_29"><a class="anchor-navigation-ex-anchor" href="#anchor_29" name="anchor_29"><i aria-hidden="true" class="fa fa-link"></i></a>28. 健康教育干预策略的主要方面（掌握）</h2>
+<h2 id="anchor_29">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_29" name="anchor_29">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>28. 健康教育干预策略的主要方面（掌握）
+</h2>
 <ol>
 <li>教育策略</li>
 <li>环境策略</li>
 <li>政策策略</li>
 </ol>
-<h2 id="anchor_30"><a class="anchor-navigation-ex-anchor" href="#anchor_30" name="anchor_30"><i aria-hidden="true" class="fa fa-link"></i></a>29. 实施健康教育计划的主要工作（掌握）</h2>
+<h2 id="anchor_30">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_30" name="anchor_30">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>29. 实施健康教育计划的主要工作（掌握）
+</h2>
 <ol>
 <li>制定实施的工作时间表</li>
 <li>实施的质量控制</li>
@@ -244,13 +364,21 @@
 <li>实施人员培训</li>
 <li>设施设备与健康教育材料</li>
 </ol>
-<h2 id="anchor_31"><a class="anchor-navigation-ex-anchor" href="#anchor_31" name="anchor_31"><i aria-hidden="true" class="fa fa-link"></i></a>30. 健康教育计划评价的主要内容（掌握）</h2>
+<h2 id="anchor_31">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_31" name="anchor_31">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>30. 健康教育计划评价的主要内容（掌握）
+</h2>
 <ol>
 <li>形成评价</li>
 <li>过程评价</li>
 <li>效果评价（近期和中期效果评价称效应评价，远期效果评价称结局评价）</li>
 </ol>
-<h2 id="anchor_32"><a class="anchor-navigation-ex-anchor" href="#anchor_32" name="anchor_32"><i aria-hidden="true" class="fa fa-link"></i></a>31. 健康教育常见的评价方案（熟悉）</h2>
+<h2 id="anchor_32">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_32" name="anchor_32">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>31. 健康教育常见的评价方案（熟悉）
+</h2>
 <ol>
 <li>不设对照组的前后测试（干预组自身前后比较）</li>
 <li>非等同比较组设计</li>
@@ -258,7 +386,11 @@
 <li>简单时间系列设计</li>
 <li>复合时间系列设计</li>
 </ol>
-<h2 id="anchor_33"><a class="anchor-navigation-ex-anchor" href="#anchor_33" name="anchor_33"><i aria-hidden="true" class="fa fa-link"></i></a>32. 健康相关行为改变的理论模式</h2>
+<h2 id="anchor_33">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_33" name="anchor_33">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>32. 健康相关行为改变的理论模式
+</h2>
 <ol>
 <li>“知信行”模式</li>
 <li>健康信念模式</li>
