--- a/md/基础知识/08.html
+++ b/md/基础知识/08.html
@@ -79,17 +79,33 @@
                 <div class="search-noresults">
                     <section class="normal markdown-section">
                         <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第八章 身体活动基本知识</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>按日常活动的身体活动类别（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>按能量代谢的身体活动类别（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>其他分类（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>4. </b>身体活动强度常用指标（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>5. </b>身体活动量的衡量（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_7'><b>6. </b>身体活动伤害的预防</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_8'><b>7. </b>个体身体活动指导的基本原则（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_9'><b>8. </b>制定个体活动计划应包括的内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_10'><b>9. </b>5-17 岁儿童的身体活动建议（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_11'><b>10. </b>成年人身体活动建议（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_12'><b>11. </b>老年人身体活动的内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_13'><b>12. </b>老年人身体活动量（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_14'><b>13. </b>老年人身体活动注意事项（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_15'><b>14. </b>2 型糖尿病患者身体活动的注意事项（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_16'><b>15. </b>原发性高血压患者的活动方式（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_17'><b>16. </b>原发性高血压患者的活动量（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_18'><b>17. </b>原发性高血压患者的注意事项（掌握）</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
-                        <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第八章 身体活动基本知识</h1>
-<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 按日常活动的身体活动类别（掌握）</h2>
+                        <h1 id="anchor_1">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>第八章 身体活动基本知识
+</h1>
+<h2 id="anchor_2">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>1. 按日常活动的身体活动类别（掌握）
+</h2>
 <ol>
 <li>职业性身体活动</li>
 <li>交通往来身体活动</li>
 <li>家务性身体活动</li>
 <li>业余休闲身体活动</li>
 </ol>
-<h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 按能量代谢的身体活动类别（掌握）</h2>
+<h2 id="anchor_3">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>2. 按能量代谢的身体活动类别（掌握）
+</h2>
 <p>身体活动，根据肌肉活动的能量来自无氧代谢还是有氧代谢，分为有氧代谢和无氧代谢运动，简称有氧运动和无氧运动。</p>
-<h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 其他分类（掌握）</h2>
+<h2 id="anchor_4">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>3. 其他分类（掌握）
+</h2>
 <ol>
 <li>关节柔韧性活动（伸展性活动）</li>
 <li>强壮肌肉活动</li>
@@ -97,7 +113,11 @@
 <li>健骨运动</li>
 <li>高强度间歇训练</li>
 </ol>
-<h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>4. 身体活动强度常用指标（掌握）</h2>
+<h2 id="anchor_5">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>4. 身体活动强度常用指标（掌握）
+</h2>
 <p>身体活动强度分为绝对强度（也称“物理强度”）和相对强度（也称“生理强度”）两类指标</p>
 <ul>
 <li>绝对强度：
@@ -112,7 +132,11 @@
 </ol>
 </li>
 </ul>
-<h2 id="anchor_6"><a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6"><i aria-hidden="true" class="fa fa-link"></i></a>5. 身体活动量的衡量（掌握）</h2>
+<h2 id="anchor_6">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>5. 身体活动量的衡量（掌握）
+</h2>
 <ol>
 <li>
 <p>国际通用的身体活动量衡量指标</p>
@@ -123,7 +147,11 @@
 <p>千步当量</p>
 </li>
 </ol>
-<h2 id="anchor_7"><a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7"><i aria-hidden="true" class="fa fa-link"></i></a>6. 身体活动伤害的预防</h2>
+<h2 id="anchor_7">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>6. 身体活动伤害的预防
+</h2>
 <ol>
 <li>量力而行、循序渐进、并采取必要的保护措施。</li>
 <li>学习安全注自我监测运动中不适症状。</li>
@@ -131,14 +159,22 @@
 <li>平常很少活动的人、中老年人、患者和有潜在疾患的个体，在开始锻炼和增加活动量应进行必要的健康筛查和运动能力评估。</li>
 <li>较大强度身体活动对心肺功能有更好的改善作用，但也易引起动伤害，因此更应合理安排运动量。</li>
 </ol>
-<h2 id="anchor_8"><a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8"><i aria-hidden="true" class="fa fa-link"></i></a>7. 个体身体活动指导的基本原则（掌握）</h2>
+<h2 id="anchor_8">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>7. 个体身体活动指导的基本原则（掌握）
+</h2>
 <ol>
 <li>动则有益</li>
 <li>贵在坚持</li>
 <li>多动更好</li>
 <li>量力适度</li>
 </ol>
-<h2 id="anchor_9"><a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9"><i aria-hidden="true" class="fa fa-link"></i></a>8. 制定个体活动计划应包括的内容（掌握）</h2>
+<h2 id="anchor_9">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>8. 制定个体活动计划应包括的内容（掌握）
+</h2>
 <ol>
 <li>收集基本信息</li>
 <li>确定身体活动目标量</li>
@@ -146,13 +182,21 @@
 <li>活动强度和时间</li>
 <li>活动进度</li>
 </ol>
-<h2 id="anchor_10"><a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10"><i aria-hidden="true" class="fa fa-link"></i></a>9. 5-17 岁儿童的身体活动建议（掌握）</h2>
+<h2 id="anchor_10">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>9. 5-17 岁儿童的身体活动建议（掌握）
+</h2>
 <ol>
 <li>每天应当至少进行 60 分钟中等强度到高强度身体活动</li>
 <li>每天身体活动超过 60 分钟将可获得额外的健康效益。</li>
 <li>每周应当包括至少三次加强肌肉和骨骼的活动。</li>
 </ol>
-<h2 id="anchor_11"><a class="anchor-navigation-ex-anchor" href="#anchor_11" name="anchor_11"><i aria-hidden="true" class="fa fa-link"></i></a>10. 成年人身体活动建议（掌握）</h2>
+<h2 id="anchor_11">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_11" name="anchor_11">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>10. 成年人身体活动建议（掌握）
+</h2>
 <ol>
 <li>每日进行 6-10 千步当量身体活动</li>
 <li>经常进行中等强度的有氧运动</li>
@@ -160,19 +204,31 @@
 <li>通过专门锻炼保持肌肉和关节功能</li>
 <li>日常生活“少静多动”</li>
 </ol>
-<h2 id="anchor_12"><a class="anchor-navigation-ex-anchor" href="#anchor_12" name="anchor_12"><i aria-hidden="true" class="fa fa-link"></i></a>11. 老年人身体活动的内容（掌握）</h2>
+<h2 id="anchor_12">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_12" name="anchor_12">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>11. 老年人身体活动的内容（掌握）
+</h2>
 <ol>
 <li>有氧运动</li>
 <li>抗阻力活动</li>
 <li>功能性身体活动</li>
 </ol>
-<h2 id="anchor_13"><a class="anchor-navigation-ex-anchor" href="#anchor_13" name="anchor_13"><i aria-hidden="true" class="fa fa-link"></i></a>12. 老年人身体活动量（掌握）</h2>
+<h2 id="anchor_13">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_13" name="anchor_13">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>12. 老年人身体活动量（掌握）
+</h2>
 <ol>
 <li>强度：个体差异较大，身体活动宜量力而行</li>
 <li>时间：每天进行 30-60 分钟中等强度的身体活动</li>
 <li>频度：每天都进行一些身体活动</li>
 </ol>
-<h2 id="anchor_14"><a class="anchor-navigation-ex-anchor" href="#anchor_14" name="anchor_14"><i aria-hidden="true" class="fa fa-link"></i></a>13. 老年人身体活动注意事项（掌握）</h2>
+<h2 id="anchor_14">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_14" name="anchor_14">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>13. 老年人身体活动注意事项（掌握）
+</h2>
 <ol>
 <li>老年人参加运动期间，应定期做医学检查及随访</li>
 <li>感觉和记忆力下降的老年人，应反复实践掌握动作的要领，老年人宜参加个人熟悉并有兴趣的运动项目</li>
@@ -181,19 +237,35 @@
 <li>合并有骨质疏松症和下肢骨关节病的老年人，不宜进行高冲击性的活动</li>
 <li>老年人在服用某些药物时，应注意药物对运动反应的影响。</li>
 </ol>
-<h2 id="anchor_15"><a class="anchor-navigation-ex-anchor" href="#anchor_15" name="anchor_15"><i aria-hidden="true" class="fa fa-link"></i></a>14. 2 型糖尿病患者身体活动的注意事项（掌握）</h2>
+<h2 id="anchor_15">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_15" name="anchor_15">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>14. 2 型糖尿病患者身体活动的注意事项（掌握）
+</h2>
 <ol>
 <li>增加运动量时的进度安排</li>
 <li>在运动量和强度的增加过程中，应定期监测患者的运动反应和病情变化，并对运动计划作出必要的调整</li>
 <li>运动低血糖的预防</li>
 <li>运动时的足部保护。</li>
 </ol>
-<h2 id="anchor_16"><a class="anchor-navigation-ex-anchor" href="#anchor_16" name="anchor_16"><i aria-hidden="true" class="fa fa-link"></i></a>15. 原发性高血压患者的活动方式（掌握）</h2>
+<h2 id="anchor_16">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_16" name="anchor_16">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>15. 原发性高血压患者的活动方式（掌握）
+</h2>
 <p>运动形式以大肌肉群参与的有氧耐力运动为主，提倡高血压患者金星有氧、中低强度、持续 10 分钟以上的活动。</p>
-<h2 id="anchor_17"><a class="anchor-navigation-ex-anchor" href="#anchor_17" name="anchor_17"><i aria-hidden="true" class="fa fa-link"></i></a>16. 原发性高血压患者的活动量（掌握）</h2>
+<h2 id="anchor_17">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_17" name="anchor_17">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>16. 原发性高血压患者的活动量（掌握）
+</h2>
 <p>高血压患者如没有运动禁忌，运动能力也没有特殊限制，其目标活动量可参考一般健康人的推荐量。</p>
 <p>高血压患者的身体活动一般应达到中等强度，达到最大心率的 50%-70%。</p>
-<h2 id="anchor_18"><a class="anchor-navigation-ex-anchor" href="#anchor_18" name="anchor_18"><i aria-hidden="true" class="fa fa-link"></i></a>17. 原发性高血压患者的注意事项（掌握）</h2>
+<h2 id="anchor_18">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_18" name="anchor_18">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>17. 原发性高血压患者的注意事项（掌握）
+</h2>
 <p>首要关注的问题是心脑血管以外，还应特别注意：</p>
 <ol>
 <li>β- 受体阻滞剂影响运动中的心率反应，应采用 RPE（运动感觉量表）等指标综合判断运动强度</li>
