--- a/md/基础知识/09.html
+++ b/md/基础知识/09.html
@@ -79,29 +79,69 @@
                 <div class="search-noresults">
                     <section class="normal markdown-section">
                         <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第九章 心理健康</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>心理学的基础及其概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>心理活动过程的内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>认知过程包括的内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>4. </b>情感过程包括的内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>5. </b>人格倾向性包括的内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_7'><b>6. </b>人格特性包括的内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_8'><b>7. </b>心理健康的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_9'><b>8. </b>心理健康的标志（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_10'><b>9. </b>我国的心理健康的标准（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_11'><b>10. </b>心理卫生的定义（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_12'><b>11. </b>心里卫生（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_13'><b>12. </b>儿童期的心理发展与心理健康（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_14'><b>13. </b>青春期的心理发展与心理健康（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_15'><b>14. </b>成年早期（青春期）的心理发展与心理健康（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_16'><b>15. </b>成年期（中年期，壮年期）的心理发展与心理健康（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_17'><b>16. </b>老年期的心理发展与心理健康（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_18'><b>17. </b>一般心理问题和严重心理问题的区别（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_19'><b>18. </b>不良行为的表现（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_20'><b>19. </b>游戏与网络成瘾（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_21'><b>20. </b>心理障碍的常见类型（掌握）</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
-                        <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第九章 心理健康</h1>
-<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 心理学的基础及其概念（掌握）</h2>
+                        <h1 id="anchor_1">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>第九章 心理健康
+</h1>
+<h2 id="anchor_2">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>1. 心理学的基础及其概念（掌握）
+</h2>
 <p>指心理活动发生、发展的过程，也就是人脑对现实的反应过程。</p>
-<h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 心理活动过程的内容（掌握）</h2>
+<h2 id="anchor_3">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>2. 心理活动过程的内容（掌握）
+</h2>
 <p>心理活动包括心理活动过程和个性心理特征两个部分，心理活动过程包括认识过程、情感过程和意志过程，个性心理特征包括包括人格倾向性和人格特征。</p>
-<h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 认知过程包括的内容（掌握）</h2>
+<h2 id="anchor_4">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>3. 认知过程包括的内容（掌握）
+</h2>
 <p>包括感觉、知觉、记忆、注意、想象、思维和言语等多种形式。</p>
-<h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>4. 情感过程包括的内容（掌握）</h2>
+<h2 id="anchor_5">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>4. 情感过程包括的内容（掌握）
+</h2>
 <p>包括情绪、情感、心境</p>
-<h2 id="anchor_6"><a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6"><i aria-hidden="true" class="fa fa-link"></i></a>5. 人格倾向性包括的内容（掌握）</h2>
+<h2 id="anchor_6">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>5. 人格倾向性包括的内容（掌握）
+</h2>
 <p>包括需要、动机、兴趣、理想、信念、世界观等心里活动。</p>
-<h2 id="anchor_7"><a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7"><i aria-hidden="true" class="fa fa-link"></i></a>6. 人格特性包括的内容（掌握）</h2>
+<h2 id="anchor_7">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>6. 人格特性包括的内容（掌握）
+</h2>
 <p>包括能力、气质、性格。</p>
-<h2 id="anchor_8"><a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8"><i aria-hidden="true" class="fa fa-link"></i></a>7. 心理健康的概念（掌握）</h2>
+<h2 id="anchor_8">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>7. 心理健康的概念（掌握）
+</h2>
 <p>指在身体、智能以及情感上与他人的心理健康不相矛盾的范围内，将个人心境发展成最佳状态。</p>
-<h2 id="anchor_9"><a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9"><i aria-hidden="true" class="fa fa-link"></i></a>8. 心理健康的标志（掌握）</h2>
+<h2 id="anchor_9">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>8. 心理健康的标志（掌握）
+</h2>
 <ol>
 <li>身体、智力、情绪十分协调</li>
 <li>适应环境、人际关系中彼此能谦让</li>
 <li>有幸福感</li>
 <li>在工作和职业中，能充分发挥自己的能力，过有效率的生活。</li>
 </ol>
-<h2 id="anchor_10"><a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10"><i aria-hidden="true" class="fa fa-link"></i></a>9. 我国的心理健康的标准（掌握）</h2>
+<h2 id="anchor_10">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>9. 我国的心理健康的标准（掌握）
+</h2>
 <ol>
 <li>智力水平处于正常范围内，并能正确客观地反映事物</li>
 <li>心理与行为特点和生理年龄相匹配</li>
@@ -111,48 +151,88 @@
 <li>行为反应适度，不过敏不迟钝</li>
 <li>在遵守基本社会行为规范的基础上，能实现个人动机，满足个人合理要求⑧自我意识与自我实现基本相符，“理想自我”与现实自我基本保持一致。</li>
 </ol>
-<h2 id="anchor_11"><a class="anchor-navigation-ex-anchor" href="#anchor_11" name="anchor_11"><i aria-hidden="true" class="fa fa-link"></i></a>10. 心理卫生的定义（掌握）</h2>
+<h2 id="anchor_11">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_11" name="anchor_11">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>10. 心理卫生的定义（掌握）
+</h2>
 <p>通过各种有益的教育和措施，维护和改进健康的心理以适应当前和发展着的社会和自然环境，使生理、心理和社会功能都保持良好或完美状态。</p>
-<h2 id="anchor_12"><a class="anchor-navigation-ex-anchor" href="#anchor_12" name="anchor_12"><i aria-hidden="true" class="fa fa-link"></i></a>11. 心里卫生（掌握）</h2>
+<h2 id="anchor_12">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_12" name="anchor_12">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>11. 心里卫生（掌握）
+</h2>
 <p>通过有益的教育和训练，以及医疗预防措施，在人的一生中的各个年龄阶段进行心理健康教育和训练，培养健康的人格，塑造良好的心理素质和灵活的适应能力，使心理活动的功能状态达到较高的健康水平，这一系列的工作属于心理卫生工作的范畴，称为心理卫生，也就是心理保健。</p>
-<h2 id="anchor_13"><a class="anchor-navigation-ex-anchor" href="#anchor_13" name="anchor_13"><i aria-hidden="true" class="fa fa-link"></i></a>12. 儿童期的心理发展与心理健康（掌握）</h2>
+<h2 id="anchor_13">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_13" name="anchor_13">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>12. 儿童期的心理发展与心理健康（掌握）
+</h2>
 <ol>
 <li>合理安排学习</li>
 <li>防止不良心理及性格的产生</li>
 <li>培养社会适应能力</li>
 </ol>
-<h2 id="anchor_14"><a class="anchor-navigation-ex-anchor" href="#anchor_14" name="anchor_14"><i aria-hidden="true" class="fa fa-link"></i></a>13. 青春期的心理发展与心理健康（掌握）</h2>
+<h2 id="anchor_14">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_14" name="anchor_14">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>13. 青春期的心理发展与心理健康（掌握）
+</h2>
 <ol>
 <li>培养良好的自我意识</li>
 <li>保护自信心和自尊心</li>
 <li>保持情绪稳定</li>
 <li>适当的性教育</li>
 </ol>
-<h2 id="anchor_15"><a class="anchor-navigation-ex-anchor" href="#anchor_15" name="anchor_15"><i aria-hidden="true" class="fa fa-link"></i></a>14. 成年早期（青春期）的心理发展与心理健康（掌握）</h2>
+<h2 id="anchor_15">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_15" name="anchor_15">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>14. 成年早期（青春期）的心理发展与心理健康（掌握）
+</h2>
 <ol>
 <li>积极适应社会变化</li>
 <li>树立良好的婚恋择偶观</li>
 </ol>
-<h2 id="anchor_16"><a class="anchor-navigation-ex-anchor" href="#anchor_16" name="anchor_16"><i aria-hidden="true" class="fa fa-link"></i></a>15. 成年期（中年期，壮年期）的心理发展与心理健康（掌握）</h2>
+<h2 id="anchor_16">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_16" name="anchor_16">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>15. 成年期（中年期，壮年期）的心理发展与心理健康（掌握）
+</h2>
 <ol>
 <li>加强自我心理保健</li>
 <li>顺利度过更年期</li>
 </ol>
-<h2 id="anchor_17"><a class="anchor-navigation-ex-anchor" href="#anchor_17" name="anchor_17"><i aria-hidden="true" class="fa fa-link"></i></a>16. 老年期的心理发展与心理健康（掌握）</h2>
+<h2 id="anchor_17">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_17" name="anchor_17">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>16. 老年期的心理发展与心理健康（掌握）
+</h2>
 <ol>
 <li>尽快适应离退休后的生活</li>
 <li>正确面对疾病和死亡</li>
 </ol>
-<h2 id="anchor_18"><a class="anchor-navigation-ex-anchor" href="#anchor_18" name="anchor_18"><i aria-hidden="true" class="fa fa-link"></i></a>17. 一般心理问题和严重心理问题的区别（掌握）</h2>
+<h2 id="anchor_18">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_18" name="anchor_18">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>17. 一般心理问题和严重心理问题的区别（掌握）
+</h2>
 <p><a data-lightbox="1" href="../../screenshot/2021-01-06-11-58-02.png"><img src="../../screenshot/2021-01-06-11-58-02.png" alt="心理问题" title="心理问题" /></a></p>
-<h2 id="anchor_19"><a class="anchor-navigation-ex-anchor" href="#anchor_19" name="anchor_19"><i aria-hidden="true" class="fa fa-link"></i></a>18. 不良行为的表现（掌握）</h2>
+<h2 id="anchor_19">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_19" name="anchor_19">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>18. 不良行为的表现（掌握）
+</h2>
 <ol>
 <li>不良生活方式</li>
 <li>致病性行为模式</li>
 <li>不良疾病行为</li>
 <li>违规行为</li>
 </ol>
-<h2 id="anchor_20"><a class="anchor-navigation-ex-anchor" href="#anchor_20" name="anchor_20"><i aria-hidden="true" class="fa fa-link"></i></a>19. 游戏与网络成瘾（掌握）</h2>
+<h2 id="anchor_20">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_20" name="anchor_20">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>19. 游戏与网络成瘾（掌握）
+</h2>
 <p>网络成瘾具有以下几个主要特征</p>
 <ol>
 <li>心理状态</li>
@@ -160,7 +240,11 @@
 <li>成瘾性</li>
 <li>与现实的冲突</li>
 </ol>
-<h2 id="anchor_21"><a class="anchor-navigation-ex-anchor" href="#anchor_21" name="anchor_21"><i aria-hidden="true" class="fa fa-link"></i></a>20. 心理障碍的常见类型（掌握）</h2>
+<h2 id="anchor_21">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_21" name="anchor_21">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>20. 心理障碍的常见类型（掌握）
+</h2>
 <ol>
 <li>焦虑障碍</li>
 <li>心境障碍</li>
