--- a/md/基础知识/10.html
+++ b/md/基础知识/10.html
@@ -79,8 +79,16 @@
                 <div class="search-noresults">
                     <section class="normal markdown-section">
                         <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第十章 中医养生学基础知识</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>中医理论的主要特点（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>中医理论的主要学说（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>阴阳学说的主要内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>4. </b>五行学说的主要内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>5. </b>经络学说的主要内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_7'><b>6. </b>中医病因学说的主要内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_8'><b>7. </b>中医诊断的方法（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_9'><b>8. </b>辩证施治的主要内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_10'><b>9. </b>常用养生保健方法</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_11'><b>10. </b>体质辨识（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_12'><b>11. </b>饮食养生要点（掌握）</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
-                        <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第十章 中医养生学基础知识</h1>
-<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 中医理论的主要特点（掌握）</h2>
+                        <h1 id="anchor_1">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>第十章 中医养生学基础知识
+</h1>
+<h2 id="anchor_2">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>1. 中医理论的主要特点（掌握）
+</h2>
 <p>中医理论的主要特点是整体观和恒动观。</p>
 <ul>
 <li>
@@ -95,7 +103,11 @@
 <p>人是自然界的一个组成部分，由阴阳两类物质构成，阴阳二气互相对立而又相互依存，病时刻都在运动与变化之中。</p>
 </li>
 </ul>
-<h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 中医理论的主要学说（掌握）</h2>
+<h2 id="anchor_3">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>2. 中医理论的主要学说（掌握）
+</h2>
 <ol>
 <li>精气学说</li>
 <li>阴阳学说</li>
@@ -105,31 +117,59 @@
 <li>经络学说</li>
 <li>中医病因学说</li>
 </ol>
-<h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 阴阳学说的主要内容（掌握）</h2>
+<h2 id="anchor_4">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>3. 阴阳学说的主要内容（掌握）
+</h2>
 <p>阴阳是宇宙中相互关联的事物或现象对立双方属性的概括。</p>
 <p>阴阳最初是指日光的向背，向日光威阳，背日光为阴。</p>
 <p>阴阳的交互作用包括：阴阳互生、阴阳交感、对立制约、互根互用，消长平衡、相互转化。</p>
 <p>中医采用阴阳学说解释人体的组织结构、生理功能、病理变化，并指导疾病的诊断、治疗和预防。</p>
-<h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>4. 五行学说的主要内容（掌握）</h2>
+<h2 id="anchor_5">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>4. 五行学说的主要内容（掌握）
+</h2>
 <p>五行学说认为，世间万物，皆由木、火、土、金、水五行构成，而事物和现象的发展变化，都是这五种物质不断运动和相互作用的结果，自然界的一切事物和现象也都可以按照木、火、土、金、水的性质和特点归纳为五个系统或类别。</p>
 <p>五行的交互作用包括：相生、相克、制化、胜复、相侮、相乘、母子相及。</p>
 <p>金木水火土 - 肺肝肾心脾 - 大肠胆膀胱小肠胃 - 鼻目耳舌口 - 悲怒恐喜思 - 辛酸咸苦甘 - 白青黑赤黄</p>
-<h2 id="anchor_6"><a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6"><i aria-hidden="true" class="fa fa-link"></i></a>5. 经络学说的主要内容（掌握）</h2>
+<h2 id="anchor_6">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>5. 经络学说的主要内容（掌握）
+</h2>
 <p>经络是经脉和络脉的总称。</p>
 <p>经络是人体运行气血、联络脏腑形体官窍、沟通上下内外的通道。</p>
 <p>经络系统包括十二经脉、十二经别、奇经百脉、十五别络、浮络、孙络、十二经筋、十二皮部等。</p>
 <p>其中十二经脉是经络系统纵行的主干，大多循行于人体深部，有确定的循行路径，而络脉是经脉的分支，循行于较浅部位，网络全身，无处不至。</p>
-<h2 id="anchor_7"><a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7"><i aria-hidden="true" class="fa fa-link"></i></a>6. 中医病因学说的主要内容（掌握）</h2>
+<h2 id="anchor_7">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>6. 中医病因学说的主要内容（掌握）
+</h2>
 <p>病因即导致疾病发生的原因，又称病原、病源、病邪等。</p>
 <p>《黄帝内经》将病因分为阴阳两类。</p>
 <p>近代则将病因分为：外感病因，包括六淫（风寒暑湿燥火）和疠气；内伤病因，包括七情（喜怒忧思悲恐惊）、饮食失宜、劳逸失度。继发病因包括痰饮、淤血等；其他病因还有外伤、寄生虫、胎传、诸毒。</p>
-<h2 id="anchor_8"><a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8"><i aria-hidden="true" class="fa fa-link"></i></a>7. 中医诊断的方法（掌握）</h2>
+<h2 id="anchor_8">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>7. 中医诊断的方法（掌握）
+</h2>
 <p>中医诊断，主要是通过“四诊”，即望诊、闻诊、问诊、切诊，获取病情资料，进而以中医理论进行分析、辨别和综合，明确病证。</p>
-<h2 id="anchor_9"><a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9"><i aria-hidden="true" class="fa fa-link"></i></a>8. 辩证施治的主要内容（掌握）</h2>
+<h2 id="anchor_9">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>8. 辩证施治的主要内容（掌握）
+</h2>
 <p>辨证论治，又称辩证施治。是中医认识疾病和治疗疾病的基本原则，是中医学对疾病特有的一种研究和处理方法。</p>
 <p>所谓辩证，就是根据望、闻、问、切四诊所收集的资料，通过分析、综合，辨清疾病的病因、性质、部位，以及邪正之间的关系，概括、判断为某种性质的证。</p>
 <p>论治又称施治，是根据辩证的结果，确定相应的治疗方法。</p>
-<h2 id="anchor_10"><a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10"><i aria-hidden="true" class="fa fa-link"></i></a>9. 常用养生保健方法</h2>
+<h2 id="anchor_10">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>9. 常用养生保健方法
+</h2>
 <ol>
 <li>体质调控</li>
 <li>饮食养生</li>
@@ -140,7 +180,11 @@
 <li>娱乐养生</li>
 <li>精神调养</li>
 </ol>
-<h2 id="anchor_11"><a class="anchor-navigation-ex-anchor" href="#anchor_11" name="anchor_11"><i aria-hidden="true" class="fa fa-link"></i></a>10. 体质辨识（掌握）</h2>
+<h2 id="anchor_11">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_11" name="anchor_11">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>10. 体质辨识（掌握）
+</h2>
 <ol>
 <li>平和质（A 型）</li>
 <li>气虚质（B 型）</li>
@@ -152,7 +196,11 @@
 <li>气郁质（H 型）</li>
 <li>特禀质（I 型）</li>
 </ol>
-<h2 id="anchor_12"><a class="anchor-navigation-ex-anchor" href="#anchor_12" name="anchor_12"><i aria-hidden="true" class="fa fa-link"></i></a>11. 饮食养生要点（掌握）</h2>
+<h2 id="anchor_12">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_12" name="anchor_12">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>11. 饮食养生要点（掌握）
+</h2>
 <ol>
 <li>和五味</li>
 <li>有节制</li>
