--- a/md/基础知识/12.html
+++ b/md/基础知识/12.html
@@ -79,8 +79,16 @@
                 <div class="search-noresults">
                     <section class="normal markdown-section">
                         <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第十二章 健康信息学</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>健康管理相关信息的主要来源（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>信息收集的主要方法（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>建立健康档案的基本要求（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>4. </b>健康档案的主要分类（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>5. </b>个人健康档案的主要构成（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_7'><b>6. </b>以问题为导向记录的基本要素（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_8'><b>7. </b>个人基础资料的主要内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_9'><b>8. </b>预防为导向记录的主要内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_10'><b>9. </b>健康体检的主要内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_11'><b>10. </b>家庭健康档案的主要内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_12'><b>11. </b>家庭基本资料的主要内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_13'><b>12. </b>社区健康档案的主要内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_14'><b>13. </b>社区居民健康状况的主要内容（掌握）</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
-                        <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第十二章 健康信息学</h1>
-<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 健康管理相关信息的主要来源（掌握）</h2>
+                        <h1 id="anchor_1">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>第十二章 健康信息学
+</h1>
+<h2 id="anchor_2">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>1. 健康管理相关信息的主要来源（掌握）
+</h2>
 <p>健康管理相关信息主要来源于各类卫生服务记录。</p>
 <p>常见的有三个方面：</p>
 <ul>
@@ -88,13 +96,21 @@
 <li>二是定期或不定期的健康体检记录；</li>
 <li>三是专题健康或疾病调查记录。</li>
 </ul>
-<h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 信息收集的主要方法（掌握）</h2>
+<h2 id="anchor_3">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>2. 信息收集的主要方法（掌握）
+</h2>
 <ol>
 <li>访谈法</li>
 <li>实地考察法</li>
 <li>问卷法。</li>
 </ol>
-<h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 建立健康档案的基本要求（掌握）</h2>
+<h2 id="anchor_4">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>3. 建立健康档案的基本要求（掌握）
+</h2>
 <ol>
 <li>资料的真实性</li>
 <li>资料的科学性</li>
@@ -102,37 +118,61 @@
 <li>资料的连续性</li>
 <li>资料的可用性</li>
 </ol>
-<h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>4. 健康档案的主要分类（掌握）</h2>
+<h2 id="anchor_5">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>4. 健康档案的主要分类（掌握）
+</h2>
 <ol>
 <li>个人健康档案</li>
 <li>家庭健康档案</li>
 <li>社区健康档案</li>
 </ol>
-<h2 id="anchor_6"><a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6"><i aria-hidden="true" class="fa fa-link"></i></a>5. 个人健康档案的主要构成（掌握）</h2>
+<h2 id="anchor_6">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>5. 个人健康档案的主要构成（掌握）
+</h2>
 <ol>
 <li>以问题为导向的健康问题记录</li>
 <li>以预防为导向的记录</li>
 </ol>
-<h2 id="anchor_7"><a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7"><i aria-hidden="true" class="fa fa-link"></i></a>6. 以问题为导向记录的基本要素（掌握）</h2>
+<h2 id="anchor_7">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>6. 以问题为导向记录的基本要素（掌握）
+</h2>
 <ol>
 <li>个人基础知识</li>
 <li>问题描述</li>
 <li>健康问题随访记录</li>
 <li>转会诊记录</li>
 </ol>
-<h2 id="anchor_8"><a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8"><i aria-hidden="true" class="fa fa-link"></i></a>7. 个人基础资料的主要内容（掌握）</h2>
+<h2 id="anchor_8">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>7. 个人基础资料的主要内容（掌握）
+</h2>
 <ol>
 <li>个人的人口学资料</li>
 <li>健康行为资料</li>
 <li>临床资料</li>
 </ol>
-<h2 id="anchor_9"><a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9"><i aria-hidden="true" class="fa fa-link"></i></a>8. 预防为导向记录的主要内容（掌握）</h2>
+<h2 id="anchor_9">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>8. 预防为导向记录的主要内容（掌握）
+</h2>
 <ol>
 <li>预防接种</li>
 <li>健康体检</li>
 <li>危险因素筛查及评价</li>
 </ol>
-<h2 id="anchor_10"><a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10"><i aria-hidden="true" class="fa fa-link"></i></a>9. 健康体检的主要内容（掌握）</h2>
+<h2 id="anchor_10">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>9. 健康体检的主要内容（掌握）
+</h2>
 <ol>
 <li>症状</li>
 <li>一般状况</li>
@@ -148,23 +188,39 @@
 <li>健康评价</li>
 <li>健康指导</li>
 </ol>
-<h2 id="anchor_11"><a class="anchor-navigation-ex-anchor" href="#anchor_11" name="anchor_11"><i aria-hidden="true" class="fa fa-link"></i></a>10. 家庭健康档案的主要内容（掌握）</h2>
+<h2 id="anchor_11">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_11" name="anchor_11">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>10. 家庭健康档案的主要内容（掌握）
+</h2>
 <ol>
 <li>家庭基本资料</li>
 <li>家系图</li>
 <li>家庭主要问题目录及描述</li>
 <li>家庭成员的健康记录</li>
 </ol>
-<h2 id="anchor_12"><a class="anchor-navigation-ex-anchor" href="#anchor_12" name="anchor_12"><i aria-hidden="true" class="fa fa-link"></i></a>11. 家庭基本资料的主要内容（掌握）</h2>
+<h2 id="anchor_12">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_12" name="anchor_12">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>11. 家庭基本资料的主要内容（掌握）
+</h2>
 <p>家庭基本资料：包括家庭各成员的基本资料，如姓名、性别、年龄、职业、教育程度、宗教信仰、健康资料等，以及家庭类型、内在结构、居住环境等。</p>
-<h2 id="anchor_13"><a class="anchor-navigation-ex-anchor" href="#anchor_13" name="anchor_13"><i aria-hidden="true" class="fa fa-link"></i></a>12. 社区健康档案的主要内容（掌握）</h2>
+<h2 id="anchor_13">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_13" name="anchor_13">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>12. 社区健康档案的主要内容（掌握）
+</h2>
 <ol>
 <li>社区基本资料</li>
 <li>社区卫生服务资料</li>
 <li>社区卫生服务状况</li>
 <li>社区居民健康状况</li>
 </ol>
-<h2 id="anchor_14"><a class="anchor-navigation-ex-anchor" href="#anchor_14" name="anchor_14"><i aria-hidden="true" class="fa fa-link"></i></a>13. 社区居民健康状况的主要内容（掌握）</h2>
+<h2 id="anchor_14">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_14" name="anchor_14">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>13. 社区居民健康状况的主要内容（掌握）
+</h2>
 <ol>
 <li>社区人口学资料：人口数量、人口构成</li>
 <li>社区患病资料</li>
