--- a/md/基础知识/13.html
+++ b/md/基础知识/13.html
@@ -79,12 +79,28 @@
                 <div class="search-noresults">
                     <section class="normal markdown-section">
                         <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第十三章 医学伦理与职业道德</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>医学伦理学的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>健康管理伦理的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>健康管理伦理原则的主要内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>4. </b>健康管理伦理规范的概念及作用（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>5. </b>健康管理伦理规范的主要内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_7'><b>6. </b>服务对象在健康管理中权利的主要内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_8'><b>7. </b>健康管理提供者在健康管理中权利的主要内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_9'><b>8. </b>健康管理提供者在健康管理中义务的主要内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_10'><b>9. </b>职业道德的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_11'><b>10. </b>职业道德的本质（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_12'><b>11. </b>职业道德的基本要求（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_13'><b>12. </b>健康管理的基本职业守则（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_14'><b>13. </b>为什么在治疗过程中医师要坚持知情同意原则？什么情况下可以不这样做？</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_15'><b>14. </b>为什么医生要为病人保密、保护病人的隐私？什么情况下可以这样做？</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_16'><b>15. </b>医生为什么要对治疗方法的风险 / 受益就行评估，如何才能使风险最小化和受益最大化？</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_17'><b>16. </b>医患关系与销售员和顾客的关系有什么区别？</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
-                        <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第十三章 医学伦理与职业道德</h1>
-<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 医学伦理学的概念（掌握）</h2>
+                        <h1 id="anchor_1">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>第十三章 医学伦理与职业道德
+</h1>
+<h2 id="anchor_2">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>1. 医学伦理学的概念（掌握）
+</h2>
 <p>医学伦理学是研究医学道德及与之密切相内容的学科。</p>
-<h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 健康管理伦理的概念（掌握）</h2>
+<h2 id="anchor_3">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>2. 健康管理伦理的概念（掌握）
+</h2>
 <p>健康管理伦理是指个人、团体、国家在健康管理中应该遵守的行为准则和规范，以及个人、团体、国家对公共健康应该承担的道德责任。</p>
-<h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 健康管理伦理原则的主要内容（掌握）</h2>
+<h2 id="anchor_4">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>3. 健康管理伦理原则的主要内容（掌握）
+</h2>
 <ol>
 <li>以人为本、以健康为中心的原则</li>
 <li>公平、合理原则</li>
@@ -92,7 +108,11 @@
 <li>有利和主体原则</li>
 <li>优质服务的原则</li>
 </ol>
-<h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>4. 健康管理伦理规范的概念及作用（掌握）</h2>
+<h2 id="anchor_5">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>4. 健康管理伦理规范的概念及作用（掌握）
+</h2>
 <ul>
 <li>
 <p>概念：</p>
@@ -103,7 +123,11 @@
 <p>健康管理伦理规范旨在规范健康管理提供者与服务对象双方的行为，协调健康管理提供者与服务对象间的关系，实质是为了提高健康管理质量。</p>
 </li>
 </ul>
-<h2 id="anchor_6"><a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6"><i aria-hidden="true" class="fa fa-link"></i></a>5. 健康管理伦理规范的主要内容（掌握）</h2>
+<h2 id="anchor_6">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>5. 健康管理伦理规范的主要内容（掌握）
+</h2>
 <ul>
 <li>
 <p>健康管理提供者应遵守的规范：</p>
@@ -118,7 +142,11 @@
 <p>双方平等、互相尊重；遵守法律、实践规范；相互信任、相互依托；良好合作、健康和谐。</p>
 </li>
 </ul>
-<h2 id="anchor_7"><a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7"><i aria-hidden="true" class="fa fa-link"></i></a>6. 服务对象在健康管理中权利的主要内容（掌握）</h2>
+<h2 id="anchor_7">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>6. 服务对象在健康管理中权利的主要内容（掌握）
+</h2>
 <ol>
 <li>合理的、平等的健康保健权；</li>
 <li>知晓健康管理相关措施及进程的权利；</li>
@@ -126,9 +154,17 @@
 <li>要求保护秘密和隐私的权利；</li>
 <li>要求赔偿健康损害的权利。</li>
 </ol>
-<h2 id="anchor_8"><a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8"><i aria-hidden="true" class="fa fa-link"></i></a>7. 健康管理提供者在健康管理中权利的主要内容（掌握）</h2>
+<h2 id="anchor_8">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>7. 健康管理提供者在健康管理中权利的主要内容（掌握）
+</h2>
 <p>维护服务对象健康的权利；为服务对象提供服务权利；恰当地使用干涉权、拒绝权等。</p>
-<h2 id="anchor_9"><a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9"><i aria-hidden="true" class="fa fa-link"></i></a>8. 健康管理提供者在健康管理中义务的主要内容（掌握）</h2>
+<h2 id="anchor_9">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>8. 健康管理提供者在健康管理中义务的主要内容（掌握）
+</h2>
 <p>对服务对象的义务：</p>
 <ol>
 <li>为服务对象提供健康保健服务的义务；</li>
@@ -143,16 +179,28 @@
 <li>提高社会人群生命质量的义务；</li>
 <li>推进健康事业发展的义务。</li>
 </ol>
-<h2 id="anchor_10"><a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10"><i aria-hidden="true" class="fa fa-link"></i></a>9. 职业道德的概念（掌握）</h2>
+<h2 id="anchor_10">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>9. 职业道德的概念（掌握）
+</h2>
 <p>职业道德是一般道德在职业行为中的反应，是人们在进行职业活动过程中，一切符合职业要求的心里意识、行为准则和行为规范的总和。</p>
-<h2 id="anchor_11"><a class="anchor-navigation-ex-anchor" href="#anchor_11" name="anchor_11"><i aria-hidden="true" class="fa fa-link"></i></a>10. 职业道德的本质（掌握）</h2>
+<h2 id="anchor_11">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_11" name="anchor_11">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>10. 职业道德的本质（掌握）
+</h2>
 <ol>
 <li>职业道德是生产发展和社会分工的产物；</li>
 <li>职业道德是人们在职业实践活动中形成的规范；</li>
 <li>职业道德是职业活动的客观要求；</li>
 <li>职业道德是社会经济关系决定的特殊社会意识形态。</li>
 </ol>
-<h2 id="anchor_12"><a class="anchor-navigation-ex-anchor" href="#anchor_12" name="anchor_12"><i aria-hidden="true" class="fa fa-link"></i></a>11. 职业道德的基本要求（掌握）</h2>
+<h2 id="anchor_12">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_12" name="anchor_12">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>11. 职业道德的基本要求（掌握）
+</h2>
 <ol>
 <li>爱岗敬业、</li>
 <li>诚实守信、</li>
@@ -160,26 +208,46 @@
 <li>服务群众、</li>
 <li>奉献社会。</li>
 </ol>
-<h2 id="anchor_13"><a class="anchor-navigation-ex-anchor" href="#anchor_13" name="anchor_13"><i aria-hidden="true" class="fa fa-link"></i></a>12. 健康管理的基本职业守则（掌握）</h2>
+<h2 id="anchor_13">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_13" name="anchor_13">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>12. 健康管理的基本职业守则（掌握）
+</h2>
 <ol>
 <li>健康管理师不得在性别、年龄、职业、名族、国籍、宗教信仰、价值观等方面歧视个体或群众；</li>
 <li>健康管理师首先应该让个体或群体了解健康管理工作的性质、特点以及个体或群体自身的权利和义务；</li>
 <li>健康管理师在对个体或群体进行健康管理工作时，应与个体或群体对工作的重担进行讨论并达成一致意见，必要时应与个体或群体签订书面协议；</li>
 <li>健康管理师应该始终遵守保密原则。</li>
 </ol>
-<h2 id="anchor_14"><a class="anchor-navigation-ex-anchor" href="#anchor_14" name="anchor_14"><i aria-hidden="true" class="fa fa-link"></i></a>13. 为什么在治疗过程中医师要坚持知情同意原则？什么情况下可以不这样做？</h2>
+<h2 id="anchor_14">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_14" name="anchor_14">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>13. 为什么在治疗过程中医师要坚持知情同意原则？什么情况下可以不这样做？
+</h2>
 <p>在临床随机检验和某些心理学研究中不能完全公开信息，否则得不到结果。</p>
 <p>在涉及到伦理时可以不这样做。</p>
-<h2 id="anchor_15"><a class="anchor-navigation-ex-anchor" href="#anchor_15" name="anchor_15"><i aria-hidden="true" class="fa fa-link"></i></a>14. 为什么医生要为病人保密、保护病人的隐私？什么情况下可以这样做？</h2>
+<h2 id="anchor_15">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_15" name="anchor_15">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>14. 为什么医生要为病人保密、保护病人的隐私？什么情况下可以这样做？
+</h2>
 <p>避免病人经济及精神创伤。</p>
 <p>以下情况可以公开：</p>
 <ul>
 <li>保密会威胁到第三方</li>
 <li>性病病人，必须通知家属。</li>
 </ul>
-<h2 id="anchor_16"><a class="anchor-navigation-ex-anchor" href="#anchor_16" name="anchor_16"><i aria-hidden="true" class="fa fa-link"></i></a>15. 医生为什么要对治疗方法的风险 / 受益就行评估，如何才能使风险最小化和受益最大化？</h2>
+<h2 id="anchor_16">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_16" name="anchor_16">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>15. 医生为什么要对治疗方法的风险 / 受益就行评估，如何才能使风险最小化和受益最大化？
+</h2>
 <p>评估时，有风险地把风险下降最小，避免对病人的伤害，使病人经济付出下降最低。</p>
-<h2 id="anchor_17"><a class="anchor-navigation-ex-anchor" href="#anchor_17" name="anchor_17"><i aria-hidden="true" class="fa fa-link"></i></a>16. 医患关系与销售员和顾客的关系有什么区别？</h2>
+<h2 id="anchor_17">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_17" name="anchor_17">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>16. 医患关系与销售员和顾客的关系有什么区别？
+</h2>
 <p>前者是生命所托的信托关系，责任重大。</p>
 <p>后者是钱和物交易，即陌生人的交易。</p>
 
