--- a/md/基础知识/14.html
+++ b/md/基础知识/14.html
@@ -79,15 +79,35 @@
                 <div class="search-noresults">
                     <section class="normal markdown-section">
                         <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第十四章 健康保险与健康管理</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>健康保险的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>商业健康保险的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>医疗保险的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>4. </b>医疗保险的特点（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>5. </b>健康保险的风险特点（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_7'><b>6. </b>健康保险发展的主要影响因素（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_8'><b>7. </b>健康管理在健康保险中的作用（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_9'><b>8. </b>健康保险对健康管理的意义（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_10'><b>9. </b>健康保险与健康管理的结合模式（掌握）</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
-                        <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第十四章 健康保险与健康管理</h1>
-<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 健康保险的概念（掌握）</h2>
+                        <h1 id="anchor_1">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>第十四章 健康保险与健康管理
+</h1>
+<h2 id="anchor_2">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>1. 健康保险的概念（掌握）
+</h2>
 <p>以人的身体健康为目标，是对因疾病或意外伤害所发生的医疗费用或因疾病或意外失能所致收入损失的保险，同时健康保险还包括因年老、疾病、或伤残需要长期护理而给予经济补偿的保险。</p>
-<h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 商业健康保险的概念（掌握）</h2>
+<h2 id="anchor_3">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>2. 商业健康保险的概念（掌握）
+</h2>
 <p>是在被保险人自愿的基础上，由商业保险公司提供的健康保险保障形式。</p>
 <p>健康保险分为：疾病保险，医疗保险，失能收入保险，护理保险</p>
-<h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 医疗保险的概念（掌握）</h2>
+<h2 id="anchor_4">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>3. 医疗保险的概念（掌握）
+</h2>
 <p>是指以约定医疗行为的发生为给付保险金条件，为保险人接受诊疗期间的医疗费用支出提供保障的保险。</p>
-<h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>4. 医疗保险的特点（掌握）</h2>
+<h2 id="anchor_5">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>4. 医疗保险的特点（掌握）
+</h2>
 <ol>
 <li>
 <p>医疗保险的保险金的给付条件是以医疗行为的发生或医疗费用支出作为依据，与疾病诊断不直接相关。</p>
@@ -103,31 +123,51 @@
 <p>医疗保险风险因素多，经营管理复杂。</p>
 </li>
 </ol>
-<h2 id="anchor_6"><a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6"><i aria-hidden="true" class="fa fa-link"></i></a>5. 健康保险的风险特点（掌握）</h2>
+<h2 id="anchor_6">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>5. 健康保险的风险特点（掌握）
+</h2>
 <ol>
 <li>不确定性</li>
 <li>多发性</li>
 <li>长期性</li>
 </ol>
-<h2 id="anchor_7"><a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7"><i aria-hidden="true" class="fa fa-link"></i></a>6. 健康保险发展的主要影响因素（掌握）</h2>
+<h2 id="anchor_7">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>6. 健康保险发展的主要影响因素（掌握）
+</h2>
 <ol>
 <li>健康保险信息的非对称性</li>
 <li>健康保险需求的特殊性</li>
 <li>疾病风险的高度相关性</li>
 </ol>
-<h2 id="anchor_8"><a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8"><i aria-hidden="true" class="fa fa-link"></i></a>7. 健康管理在健康保险中的作用（掌握）</h2>
+<h2 id="anchor_8">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>7. 健康管理在健康保险中的作用（掌握）
+</h2>
 <ol>
 <li>延伸保险服务内容</li>
 <li>控制保险赔付风险</li>
 <li>拓宽保险投资领域</li>
 </ol>
-<h2 id="anchor_9"><a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9"><i aria-hidden="true" class="fa fa-link"></i></a>8. 健康保险对健康管理的意义（掌握）</h2>
+<h2 id="anchor_9">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>8. 健康保险对健康管理的意义（掌握）
+</h2>
 <ol>
 <li>健康保险促进健康管理的资源配置与整合</li>
 <li>健康保险可作为健康管理的战略性市场渠道</li>
 <li>健康保险能够加强健康管理的良好认同度</li>
 </ol>
-<h2 id="anchor_10"><a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10"><i aria-hidden="true" class="fa fa-link"></i></a>9. 健康保险与健康管理的结合模式（掌握）</h2>
+<h2 id="anchor_10">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>9. 健康保险与健康管理的结合模式（掌握）
+</h2>
 <ol>
 <li>服务完全外包模式</li>
 <li>自行提供服务模式</li>
