--- a/md/基础知识/15.html
+++ b/md/基础知识/15.html
@@ -79,14 +79,26 @@
                 <div class="search-noresults">
                     <section class="normal markdown-section">
                         <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第十五章 健康管理服务营销</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>美国健康管理服务包括的层次（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>健康管理服务特性（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>健康管理的行业本质（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>4. </b>何谓“管理”？</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>5. </b>健康管理 PDCA 循环的主要阶段以及主要实施步骤（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_7'><b>6. </b>健康管理服务营销过程（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_8'><b>7. </b>健康管理人群需求特征（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_9'><b>8. </b>健康管理消费行为特征（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_10'><b>9. </b>消费者的购买决策过程（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_11'><b>10. </b>健康管理服务营销组合的主要内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_12'><b>11. </b>健康管理产品的定义（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_13'><b>12. </b>服务产品的定价方法（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_14'><b>13. </b>成本导向定价法公式（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_15'><b>14. </b>健康管理服务营销采取的方式（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_16'><b>15. </b>健康相关产品的分类（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_17'><b>16. </b>消毒产品的审评依据（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_18'><b>17. </b>涉水产品的慨念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_19'><b>18. </b>涉水产品的识别（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_20'><b>19. </b>新资源食品的主要内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_21'><b>20. </b>化妆品的定义（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_22'><b>21. </b>健康相关产品的命名原则（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_23'><b>22. </b>健康相关产品命名时禁止使用内容（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_24'><b>23. </b>健康咨询服务形式的划分（掌握）</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
-                        <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第十五章 健康管理服务营销</h1>
-<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 美国健康管理服务包括的层次（掌握）</h2>
+                        <h1 id="anchor_1">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>第十五章 健康管理服务营销
+</h1>
+<h2 id="anchor_2">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>1. 美国健康管理服务包括的层次（掌握）
+</h2>
 <ol>
 <li>提高健康认知水平</li>
 <li>生活方式的改变</li>
 <li>建立支持性环境</li>
 </ol>
-<h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 健康管理服务特性（掌握）</h2>
+<h2 id="anchor_3">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>2. 健康管理服务特性（掌握）
+</h2>
 <ol>
 <li>无形性</li>
 <li>不可分割性</li>
@@ -95,11 +107,23 @@
 <li>客户的满意标准是不同的</li>
 <li>客户的参与程度</li>
 </ol>
-<h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 健康管理的行业本质（掌握）</h2>
+<h2 id="anchor_4">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>3. 健康管理的行业本质（掌握）
+</h2>
 <p>健康管理的行业本质是“管理”两个字。</p>
-<h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>4. 何谓“管理”？</h2>
+<h2 id="anchor_5">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>4. 何谓“管理”？
+</h2>
 <p>管理即是一个计划以及为达成计划所实施的一切活动的全体</p>
-<h2 id="anchor_6"><a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6"><i aria-hidden="true" class="fa fa-link"></i></a>5. 健康管理 PDCA 循环的主要阶段以及主要实施步骤（掌握）</h2>
+<h2 id="anchor_6">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>5. 健康管理 PDCA 循环的主要阶段以及主要实施步骤（掌握）
+</h2>
 <p>健康管理 PDCA 循环可以分为四个阶段八个步骤实施：</p>
 <ul>
 <li>第一阶段：（计划阶段）
@@ -127,7 +151,11 @@
 </ul>
 </li>
 </ul>
-<h2 id="anchor_7"><a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7"><i aria-hidden="true" class="fa fa-link"></i></a>6. 健康管理服务营销过程（掌握）</h2>
+<h2 id="anchor_7">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>6. 健康管理服务营销过程（掌握）
+</h2>
 <ol>
 <li>确定目标客户</li>
 <li>分析评价需求</li>
@@ -136,7 +164,11 @@
 <li>促进客户购买</li>
 <li>实现客户健康价值</li>
 </ol>
-<h2 id="anchor_8"><a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8"><i aria-hidden="true" class="fa fa-link"></i></a>7. 健康管理人群需求特征（掌握）</h2>
+<h2 id="anchor_8">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>7. 健康管理人群需求特征（掌握）
+</h2>
 <ol>
 <li>需求的被动性</li>
 <li>需求的不稳定性</li>
@@ -147,7 +179,11 @@
 <li>需求的超前性与滞后性</li>
 <li>需求的重复性</li>
 </ol>
-<h2 id="anchor_9"><a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9"><i aria-hidden="true" class="fa fa-link"></i></a>8. 健康管理消费行为特征（掌握）</h2>
+<h2 id="anchor_9">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>8. 健康管理消费行为特征（掌握）
+</h2>
 <ol>
 <li>习惯性</li>
 <li>经济型</li>
@@ -155,7 +191,11 @@
 <li>盲目型</li>
 <li>多善型</li>
 </ol>
-<h2 id="anchor_10"><a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10"><i aria-hidden="true" class="fa fa-link"></i></a>9. 消费者的购买决策过程（掌握）</h2>
+<h2 id="anchor_10">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>9. 消费者的购买决策过程（掌握）
+</h2>
 <p>五个阶段：</p>
 <ol>
 <li>识别需求</li>
@@ -164,7 +204,11 @@
 <li>选择购买</li>
 <li>购买后评估</li>
 </ol>
-<h2 id="anchor_11"><a class="anchor-navigation-ex-anchor" href="#anchor_11" name="anchor_11"><i aria-hidden="true" class="fa fa-link"></i></a>10. 健康管理服务营销组合的主要内容（掌握）</h2>
+<h2 id="anchor_11">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_11" name="anchor_11">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>10. 健康管理服务营销组合的主要内容（掌握）
+</h2>
 <ol>
 <li>产品、</li>
 <li>价格、</li>
@@ -174,23 +218,43 @@
 <li>流程、</li>
 <li>人员。</li>
 </ol>
-<h2 id="anchor_12"><a class="anchor-navigation-ex-anchor" href="#anchor_12" name="anchor_12"><i aria-hidden="true" class="fa fa-link"></i></a>11. 健康管理产品的定义（掌握）</h2>
+<h2 id="anchor_12">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_12" name="anchor_12">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>11. 健康管理产品的定义（掌握）
+</h2>
 <p>健康管理产品是健康服务机构提供给服务对象用于满足其健康需要和欲望的服务，包括有形和无形服务。</p>
-<h2 id="anchor_13"><a class="anchor-navigation-ex-anchor" href="#anchor_13" name="anchor_13"><i aria-hidden="true" class="fa fa-link"></i></a>12. 服务产品的定价方法（掌握）</h2>
+<h2 id="anchor_13">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_13" name="anchor_13">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>12. 服务产品的定价方法（掌握）
+</h2>
 <ol>
 <li>成本导向定价法</li>
 <li>竞争导向定价法</li>
 <li>需求导向定价法</li>
 </ol>
-<h2 id="anchor_14"><a class="anchor-navigation-ex-anchor" href="#anchor_14" name="anchor_14"><i aria-hidden="true" class="fa fa-link"></i></a>13. 成本导向定价法公式（掌握）</h2>
+<h2 id="anchor_14">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_14" name="anchor_14">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>13. 成本导向定价法公式（掌握）
+</h2>
 <p>不含税价格 = 直接成本＋间接成本＋（边际）利润</p>
-<h2 id="anchor_15"><a class="anchor-navigation-ex-anchor" href="#anchor_15" name="anchor_15"><i aria-hidden="true" class="fa fa-link"></i></a>14. 健康管理服务营销采取的方式（掌握）</h2>
+<h2 id="anchor_15">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_15" name="anchor_15">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>14. 健康管理服务营销采取的方式（掌握）
+</h2>
 <ol>
 <li>直销</li>
 <li>分销代理</li>
 <li>网络营销</li>
 </ol>
-<h2 id="anchor_16"><a class="anchor-navigation-ex-anchor" href="#anchor_16" name="anchor_16"><i aria-hidden="true" class="fa fa-link"></i></a>15. 健康相关产品的分类（掌握）</h2>
+<h2 id="anchor_16">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_16" name="anchor_16">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>15. 健康相关产品的分类（掌握）
+</h2>
 <ol>
 <li>消毒产品</li>
 <li>涉水产品</li>
@@ -198,27 +262,51 @@
 <li>保健食品</li>
 <li>化妆品</li>
 </ol>
-<h2 id="anchor_17"><a class="anchor-navigation-ex-anchor" href="#anchor_17" name="anchor_17"><i aria-hidden="true" class="fa fa-link"></i></a>16. 消毒产品的审评依据（掌握）</h2>
+<h2 id="anchor_17">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_17" name="anchor_17">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>16. 消毒产品的审评依据（掌握）
+</h2>
 <p>是依据《中华人民共和国传染病防治法》及其实施办法和《消毒管理办法》，由卫生部门审批。</p>
-<h2 id="anchor_18"><a class="anchor-navigation-ex-anchor" href="#anchor_18" name="anchor_18"><i aria-hidden="true" class="fa fa-link"></i></a>17. 涉水产品的慨念（掌握）</h2>
+<h2 id="anchor_18">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_18" name="anchor_18">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>17. 涉水产品的慨念（掌握）
+</h2>
 <p>指涉及饮用水卫生安全的产品。</p>
 <p>凡在饮用水生产和供水过程中与饮用水接触的联、接、止水材料，塑料及有机合成管材、管件，防护涂料、水处理剂、除垢剂、水质处理器及其他材料和化学物质都是涉水产品。</p>
-<h2 id="anchor_19"><a class="anchor-navigation-ex-anchor" href="#anchor_19" name="anchor_19"><i aria-hidden="true" class="fa fa-link"></i></a>18. 涉水产品的识别（掌握）</h2>
+<h2 id="anchor_19">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_19" name="anchor_19">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>18. 涉水产品的识别（掌握）
+</h2>
 <ol>
 <li>查验卫生批件</li>
 <li>看材料品质</li>
 <li>看制造、装配工艺及外观</li>
 </ol>
-<h2 id="anchor_20"><a class="anchor-navigation-ex-anchor" href="#anchor_20" name="anchor_20"><i aria-hidden="true" class="fa fa-link"></i></a>19. 新资源食品的主要内容（掌握）</h2>
+<h2 id="anchor_20">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_20" name="anchor_20">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>19. 新资源食品的主要内容（掌握）
+</h2>
 <ol>
 <li>在我国无食用习惯的动物、植物和微生物</li>
 <li>在动物、植物和微生物中分离的在我国无食用习惯的食品原料</li>
 <li>在食品加工过程中使用的微生物新品种</li>
 <li>因采用新工艺生产导致原有成分或者结构发生改变的食品材料</li>
 </ol>
-<h2 id="anchor_21"><a class="anchor-navigation-ex-anchor" href="#anchor_21" name="anchor_21"><i aria-hidden="true" class="fa fa-link"></i></a>20. 化妆品的定义（掌握）</h2>
+<h2 id="anchor_21">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_21" name="anchor_21">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>20. 化妆品的定义（掌握）
+</h2>
 <p>化妆品是指以涂抹，喷洒或其他类似方法，散布于人体表面的任何部位，如皮肤、毛发，指（趾）甲、唇、齿等，已达到清洁、保养、美容、修饰和改变外观，或者修正人体气味，保持良好状态为目的的化学工业品或精细化工产品。</p>
-<h2 id="anchor_22"><a class="anchor-navigation-ex-anchor" href="#anchor_22" name="anchor_22"><i aria-hidden="true" class="fa fa-link"></i></a>21. 健康相关产品的命名原则（掌握）</h2>
+<h2 id="anchor_22">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_22" name="anchor_22">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>21. 健康相关产品的命名原则（掌握）
+</h2>
 <ul>
 <li>
 <p>符合国家有关法律、法规、规章、标准、规范的规定</p>
@@ -238,7 +326,11 @@
 <p>可采用意译，音译或译音合译，一般以意译为主。</p>
 </li>
 </ul>
-<h2 id="anchor_23"><a class="anchor-navigation-ex-anchor" href="#anchor_23" name="anchor_23"><i aria-hidden="true" class="fa fa-link"></i></a>22. 健康相关产品命名时禁止使用内容（掌握）</h2>
+<h2 id="anchor_23">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_23" name="anchor_23">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>22. 健康相关产品命名时禁止使用内容（掌握）
+</h2>
 <ul>
 <li>消费者不易理解的专业术语及地方方言</li>
 <li>虚假、夸大和绝对化的词语，如“特效”、“高效”、“神奇”、“广谱”、“第 x 代”等</li>
@@ -247,7 +339,11 @@
 <li>外文字母、汉语拼音、符号等（表明型号的除外）。</li>
 </ul>
 <p>如为注册商标或必须使用外文字母、符号的，需在说明书中用中文说明。</p>
-<h2 id="anchor_24"><a class="anchor-navigation-ex-anchor" href="#anchor_24" name="anchor_24"><i aria-hidden="true" class="fa fa-link"></i></a>23. 健康咨询服务形式的划分（掌握）</h2>
+<h2 id="anchor_24">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_24" name="anchor_24">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>23. 健康咨询服务形式的划分（掌握）
+</h2>
 <ul>
 <li>按性质划分：健康咨询服务、专题健康咨询服务</li>
 <li>按咨询规模：个体健康咨询服务、团体健康咨询服务</li>
