--- a/md/基础知识/04.html
+++ b/md/基础知识/04.html
@@ -79,8 +79,16 @@
                 <div class="search-noresults">
                     <section class="normal markdown-section">
                         <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第四章 常见慢性病</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>慢性病致病的主要危险因素（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>恶性肿瘤的危险因素（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>高血压的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>4. </b>血压测量的主要方式（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>5. </b>诊室血压的测量方法（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_7'><b>6. </b>自测血压的基本方法（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_8'><b>7. </b>动态血压的概念及参考标准（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_9'><b>8. </b>高血压发病的危险因素（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_10'><b>9. </b>糖尿病的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_11'><b>10. </b>糖尿病的分型（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_12'><b>11. </b>糖尿病的常用诊断标准（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_13'><b>12. </b>2 型糖尿病的危险因素（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_14'><b>13. </b>冠状动脉粥样硬化性心脏病的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_15'><b>14. </b>冠性病的分型（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_16'><b>15. </b>冠心病的临床表现（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_17'><b>16. </b>冠心病的主要诊断方法（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_18'><b>17. </b>冠心病的主要危险因素（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_19'><b>18. </b>脑卒中的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_20'><b>19. </b>脑卒中的临床表现（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_21'><b>20. </b>脑卒中的主要诊断方法（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_22'><b>21. </b>脑卒中的危险因素（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_23'><b>22. </b>慢性阻塞性肺疾病的概念（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_24'><b>23. </b>慢性阻塞性肺疾病的临床表现（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_25'><b>24. </b>慢性阻塞性肺疾病的危险因素（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_26'><b>25. </b>超重或肥胖的判断标准（掌握）</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_27'><b>26. </b>超重或肥胖的主要原因（掌握）</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
-                        <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第四章 常见慢性病</h1>
-<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 慢性病致病的主要危险因素（掌握）</h2>
+                        <h1 id="anchor_1">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>第四章 常见慢性病
+</h1>
+<h2 id="anchor_2">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>1. 慢性病致病的主要危险因素（掌握）
+</h2>
 <p>慢性病危险因素大致分为三类：环境危险因素、行为危险因素和宿主危险因素。</p>
 <ol>
 <li>吸烟</li>
@@ -92,7 +100,11 @@
 <li>不良的心理社会因素</li>
 <li>遗传和基因因素</li>
 </ol>
-<h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 恶性肿瘤的危险因素（掌握）</h2>
+<h2 id="anchor_3">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>2. 恶性肿瘤的危险因素（掌握）
+</h2>
 <p>恶性肿瘤发生的原因非常复杂，但大体可分为遗传和先天性因素及后天环境因素。</p>
 <p>少数癌症的发生主要和遗传及先天性因素有关，但大多数癌症，主要和后天环境及个人生活方式因素有关。</p>
 <p>我国癌症主要危险因素分别是：</p>
@@ -103,11 +115,23 @@
 <li>职业危害</li>
 <li>其他环境因素。</li>
 </ol>
-<h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 高血压的概念（掌握）</h2>
+<h2 id="anchor_4">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>3. 高血压的概念（掌握）
+</h2>
 <p>高血压是一种以动脉血压持续升高为特征的进行性心血管损害性疾病。是全球人类最常见的慢性病。分原发性和继发性。</p>
-<h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>4. 血压测量的主要方式（掌握）</h2>
+<h2 id="anchor_5">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>4. 血压测量的主要方式（掌握）
+</h2>
 <p>血压测量有三种方式：诊室血压、自测血压、动态血压。</p>
-<h2 id="anchor_6"><a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6"><i aria-hidden="true" class="fa fa-link"></i></a>5. 诊室血压的测量方法（掌握）</h2>
+<h2 id="anchor_6">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>5. 诊室血压的测量方法（掌握）
+</h2>
 <ol>
 <li>选择符合标准的水银柱式血压计或符合国际标准及中国高血压联盟认证的电子血压计进行测量。</li>
 <li>袖带大小适合患者上臂臂围，至少覆盖上臂臂围的 2/3。</li>
@@ -118,17 +142,29 @@
 <li>确定血压读数：所有读数以水银柱凸面的顶端为准，读数取偶数，电子血压计以显示血压数据为准。</li>
 <li>间隔 1～2 分钟重复测量，取两次读数平均值记录。如收缩压或舒张压的两次读数相差 5mmHg 以上应再次测量。以三次读数平均值作为测量结果。</li>
 </ol>
-<h2 id="anchor_7"><a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7"><i aria-hidden="true" class="fa fa-link"></i></a>6. 自测血压的基本方法（掌握）</h2>
+<h2 id="anchor_7">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>6. 自测血压的基本方法（掌握）
+</h2>
 <ol>
 <li>对新诊断高血压者，建议家庭自测血压连续 7 天，每天早晚各一次，每次测量 3 遍；去掉第一天血压值，计算后 6 天血压值，根据后 6 天血压平均值，为治疗决定提供参考。</li>
 <li>血压稳定后，建议每周固定一天自测血压，于早上起床后 1 小时，服降压药前测量坐位血压。</li>
 <li>血压不稳定或未达标者，建议增加自测频率。</li>
 </ol>
 <p>推荐使用符合国际标准的上臂式全自动或半自动电子血压计。</p>
-<h2 id="anchor_8"><a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8"><i aria-hidden="true" class="fa fa-link"></i></a>7. 动态血压的概念及参考标准（掌握）</h2>
+<h2 id="anchor_8">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>7. 动态血压的概念及参考标准（掌握）
+</h2>
 <p>动态血压是指患者佩戴动态血压检测仪记录的 24 小时血压。</p>
 <p>动态血压的正常值国内参考标准为：24 小时平均值＜130/80mmHg，白昼平均值＜135/85mmHg，夜间平均值＜125/75mmHg。</p>
-<h2 id="anchor_9"><a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9"><i aria-hidden="true" class="fa fa-link"></i></a>8. 高血压发病的危险因素（掌握）</h2>
+<h2 id="anchor_9">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_9" name="anchor_9">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>8. 高血压发病的危险因素（掌握）
+</h2>
 <p>高血压危险因素较多，比较明确的是：超重 / 肥胖或腹型肥胖、高盐饮食、长期过量饮酒、长期精神过度紧张。</p>
 <p>我国人群高血压发病的主要危险因素有：</p>
 <ol>
@@ -137,18 +173,34 @@
 <li>饮酒</li>
 <li>其它危险因素，如遗传等。</li>
 </ol>
-<h2 id="anchor_10"><a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10"><i aria-hidden="true" class="fa fa-link"></i></a>9. 糖尿病的概念（掌握）</h2>
+<h2 id="anchor_10">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_10" name="anchor_10">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>9. 糖尿病的概念（掌握）
+</h2>
 <p>糖尿病是由多种病因引起的代谢紊乱，其特点是慢性高血糖，伴有胰岛素分泌不足和（或）作用障碍，导致碳水化合物、脂肪、蛋白质代谢紊乱，造成多种器官的慢性损坏、功能障碍甚至衰竭。</p>
-<h2 id="anchor_11"><a class="anchor-navigation-ex-anchor" href="#anchor_11" name="anchor_11"><i aria-hidden="true" class="fa fa-link"></i></a>10. 糖尿病的分型（掌握）</h2>
+<h2 id="anchor_11">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_11" name="anchor_11">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>10. 糖尿病的分型（掌握）
+</h2>
 <p>糖尿病可分为 1 型、2 型、其它特殊类型及妊娠糖尿病 4 种。</p>
-<h2 id="anchor_12"><a class="anchor-navigation-ex-anchor" href="#anchor_12" name="anchor_12"><i aria-hidden="true" class="fa fa-link"></i></a>11. 糖尿病的常用诊断标准（掌握）</h2>
+<h2 id="anchor_12">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_12" name="anchor_12">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>11. 糖尿病的常用诊断标准（掌握）
+</h2>
 <p>我国目前采用 WHO（1999 年）糖尿病诊断标准，即血糖升高达到下列三条标准中的任意一项时，就可诊断患有糖尿病。</p>
 <ol>
 <li>糖尿病症状 + 任意时间血糖葡萄糖水平≥11.1mmol/L（200mg/dl）或；</li>
 <li>空腹血浆葡萄糖（FPG）水平≥7.0mmol/L（126mg/dl）或；</li>
 <li>口服葡萄糖耐量试验（OGTT）实验中，餐后 2 小时血浆葡萄糖水平 11.1mmol/L（200mg/dl）。</li>
 </ol>
-<h2 id="anchor_13"><a class="anchor-navigation-ex-anchor" href="#anchor_13" name="anchor_13"><i aria-hidden="true" class="fa fa-link"></i></a>12. 2 型糖尿病的危险因素（掌握）</h2>
+<h2 id="anchor_13">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_13" name="anchor_13">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>12. 2 型糖尿病的危险因素（掌握）
+</h2>
 <ol>
 <li>遗传因素</li>
 <li>肥胖或超重</li>
@@ -159,9 +211,17 @@
 <li>胰岛素抵抗（IR）</li>
 <li>高血压及其他易患因素</li>
 </ol>
-<h2 id="anchor_14"><a class="anchor-navigation-ex-anchor" href="#anchor_14" name="anchor_14"><i aria-hidden="true" class="fa fa-link"></i></a>13. 冠状动脉粥样硬化性心脏病的概念（掌握）</h2>
+<h2 id="anchor_14">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_14" name="anchor_14">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>13. 冠状动脉粥样硬化性心脏病的概念（掌握）
+</h2>
 <p>冠状动脉粥样硬化性心脏病，简称冠心病，又称缺血性心脏病，是由于冠状动脉发生严重粥样硬化性狭窄或阻塞，或在此基础上合并痉挛，以及血栓形成，引起冠状动脉供血不足、心肌缺血或梗死的一种心脏病。</p>
-<h2 id="anchor_15"><a class="anchor-navigation-ex-anchor" href="#anchor_15" name="anchor_15"><i aria-hidden="true" class="fa fa-link"></i></a>14. 冠性病的分型（掌握）</h2>
+<h2 id="anchor_15">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_15" name="anchor_15">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>14. 冠性病的分型（掌握）
+</h2>
 <p>冠心病分 5 型：</p>
 <ol>
 <li>无症状性心肌缺血；</li>
@@ -171,7 +231,11 @@
 <li>猝死。</li>
 </ol>
 <p>新的分型：急性冠脉综合征、慢性冠脉病。</p>
-<h2 id="anchor_16"><a class="anchor-navigation-ex-anchor" href="#anchor_16" name="anchor_16"><i aria-hidden="true" class="fa fa-link"></i></a>15. 冠心病的临床表现（掌握）</h2>
+<h2 id="anchor_16">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_16" name="anchor_16">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>15. 冠心病的临床表现（掌握）
+</h2>
 <ul>
 <li>
 <p>心绞痛的特点有：</p>
@@ -186,12 +250,20 @@
 <p>急性心肌梗死突出症状为胸痛，疼痛较心绞痛更剧烈，呈压榨性或绞窄性，难以忍受，患者有濒死感，烦躁不安；部位及放射部位与心绞痛相同，持续时间久，半小时至几小时或更长，休息或舌下含服硝酸甘油不能缓解，常需要使用麻醉性镇痛剂。</p>
 </li>
 </ul>
-<h2 id="anchor_17"><a class="anchor-navigation-ex-anchor" href="#anchor_17" name="anchor_17"><i aria-hidden="true" class="fa fa-link"></i></a>16. 冠心病的主要诊断方法（掌握）</h2>
+<h2 id="anchor_17">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_17" name="anchor_17">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>16. 冠心病的主要诊断方法（掌握）
+</h2>
 <p>出现典型的心绞痛或发生心肌梗死，临床上可基本明确冠心病的诊断。</p>
 <p>急性心肌梗死的诊断根据典型的临床表现、特征性心电图改变和血清酶学的升高。</p>
 <p>诊断冠状动脉狭窄的金标准，仍为冠状动脉造影检查。</p>
 <p>今年来，多层螺旋 CT 冠状动脉成像，日益成为冠状动脉检查的重要手段。</p>
-<h2 id="anchor_18"><a class="anchor-navigation-ex-anchor" href="#anchor_18" name="anchor_18"><i aria-hidden="true" class="fa fa-link"></i></a>17. 冠心病的主要危险因素（掌握）</h2>
+<h2 id="anchor_18">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_18" name="anchor_18">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>17. 冠心病的主要危险因素（掌握）
+</h2>
 <ol>
 <li>高血压</li>
 <li>血脂异常和高胆固醇血症</li>
@@ -201,23 +273,39 @@
 <li>多种危险因素的联合作用</li>
 <li>其它，如家属史等。</li>
 </ol>
-<h2 id="anchor_19"><a class="anchor-navigation-ex-anchor" href="#anchor_19" name="anchor_19"><i aria-hidden="true" class="fa fa-link"></i></a>18. 脑卒中的概念（掌握）</h2>
+<h2 id="anchor_19">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_19" name="anchor_19">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>18. 脑卒中的概念（掌握）
+</h2>
 <p>脑卒中是指一组发病急骤的血管病，又称急性脑血管病事件，俗称中风。</p>
 <p>脑卒中包括蛛网膜下腔出血、脑出血和脑梗死。</p>
-<h2 id="anchor_20"><a class="anchor-navigation-ex-anchor" href="#anchor_20" name="anchor_20"><i aria-hidden="true" class="fa fa-link"></i></a>19. 脑卒中的临床表现（掌握）</h2>
+<h2 id="anchor_20">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_20" name="anchor_20">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>19. 脑卒中的临床表现（掌握）
+</h2>
 <ol>
 <li>脑梗死：偏瘫、偏身感觉障碍、失语、共济失调等，部分可有头痛、呕吐、昏迷等全脑症状</li>
 <li>脑出血：多在情绪激动或活动时急性起病，多在情绪激动或活动时急性起病，常伴头痛、呕吐，可伴血压增高、意识障碍和脑膜刺激征。</li>
 <li>蛛网膜下腔出血：突发剧烈头痛、持续不能缓解或进行性加重；多伴恶心、呕吐；可有短暂的意识障碍及烦躁、谵妄等精神症状，少数出现癫痫发作；其突出体征是脑膜刺激征明显。</li>
 </ol>
-<h2 id="anchor_21"><a class="anchor-navigation-ex-anchor" href="#anchor_21" name="anchor_21"><i aria-hidden="true" class="fa fa-link"></i></a>20. 脑卒中的主要诊断方法（掌握）</h2>
+<h2 id="anchor_21">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_21" name="anchor_21">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>20. 脑卒中的主要诊断方法（掌握）
+</h2>
 <p>头颅 CT 扫描和标准头颅磁共振（MRI）是主要诊断方法</p>
 <ol>
 <li>脑梗死：头颅 CT 和标准头颅磁共振在 24 小时内常不能显示病灶，但可排除脑出血，24 小时后逐渐显示低密度病灶。磁共振弥散加权成像可以早期显示缺血组织的大小、部位。</li>
 <li>脑出血：头颅 CT 是诊断脑出血安全有效的方法，可准确、清楚的显示脑出血部位、出血量。</li>
 <li>蛛网膜下腔出血：头颅 CT 是诊断蛛网膜下腔出血的首选方法。</li>
 </ol>
-<h2 id="anchor_22"><a class="anchor-navigation-ex-anchor" href="#anchor_22" name="anchor_22"><i aria-hidden="true" class="fa fa-link"></i></a>21. 脑卒中的危险因素（掌握）</h2>
+<h2 id="anchor_22">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_22" name="anchor_22">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>21. 脑卒中的危险因素（掌握）
+</h2>
 <ol>
 <li>高血压</li>
 <li>心脏病</li>
@@ -229,9 +317,17 @@
 <li>肥胖</li>
 <li>其它</li>
 </ol>
-<h2 id="anchor_23"><a class="anchor-navigation-ex-anchor" href="#anchor_23" name="anchor_23"><i aria-hidden="true" class="fa fa-link"></i></a>22. 慢性阻塞性肺疾病的概念（掌握）</h2>
+<h2 id="anchor_23">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_23" name="anchor_23">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>22. 慢性阻塞性肺疾病的概念（掌握）
+</h2>
 <p>慢性阻塞性肺疾病是一种以气流受限为特征的疾病，其气流受限不完全可逆、进行性发展，与肺部对香烟烟雾等有害气体或有害颗粒的异常炎症反应有关。</p>
-<h2 id="anchor_24"><a class="anchor-navigation-ex-anchor" href="#anchor_24" name="anchor_24"><i aria-hidden="true" class="fa fa-link"></i></a>23. 慢性阻塞性肺疾病的临床表现（掌握）</h2>
+<h2 id="anchor_24">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_24" name="anchor_24">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>23. 慢性阻塞性肺疾病的临床表现（掌握）
+</h2>
 <ul>
 <li>
 <p>主要症状：</p>
@@ -247,15 +343,27 @@
 <p>体征：早期不明显，随疾病进展，可出现桶状胸、呼吸变浅、频率增快，肺叩诊呈过度清音，两肺呼吸音减低，肺部干、湿啰音；低氧血症者可出现黏膜及皮肤发绀，伴右心衰竭者可见下肢水肿、肝大。</p>
 </li>
 </ul>
-<h2 id="anchor_25"><a class="anchor-navigation-ex-anchor" href="#anchor_25" name="anchor_25"><i aria-hidden="true" class="fa fa-link"></i></a>24. 慢性阻塞性肺疾病的危险因素（掌握）</h2>
+<h2 id="anchor_25">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_25" name="anchor_25">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>24. 慢性阻塞性肺疾病的危险因素（掌握）
+</h2>
 <ol>
 <li>个体易感因素</li>
 <li>环境因素：吸烟、职业性粉尘和化学物质、空气污染、感染。</li>
 </ol>
-<h2 id="anchor_26"><a class="anchor-navigation-ex-anchor" href="#anchor_26" name="anchor_26"><i aria-hidden="true" class="fa fa-link"></i></a>25. 超重或肥胖的判断标准（掌握）</h2>
+<h2 id="anchor_26">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_26" name="anchor_26">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>25. 超重或肥胖的判断标准（掌握）
+</h2>
 <p>判断超重和肥胖的指标主要是体质指数（bodymassindex，BMI）。计算方法是体重（kg）与身高（m）平方的比值，单位是（kg/m²）。</p>
 <p>目前我国常人 BMI 的切点为 18.5≤BMI＜24kg/m²为正常，24≤BMI＜27.9kg/m²为超重，BMI24≥kg/m²为肥胖。</p>
-<h2 id="anchor_27"><a class="anchor-navigation-ex-anchor" href="#anchor_27" name="anchor_27"><i aria-hidden="true" class="fa fa-link"></i></a>26. 超重或肥胖的主要原因（掌握）</h2>
+<h2 id="anchor_27">
+    <a class="anchor-navigation-ex-anchor" href="#anchor_27" name="anchor_27">
+        <i aria-hidden="true" class="fa fa-link"></i>
+    </a>26. 超重或肥胖的主要原因（掌握）
+</h2>
 <ol>
 <li>遗传因素</li>
 <li>饮食因素</li>
